@@ -19,6 +19,7 @@ package jakarta.el;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -32,6 +33,15 @@ import jakarta.el.BeanELResolver.BeanProperty;
  */
 class BeanSupportStandalone extends BeanSupport {
 
+    /*
+     * The full JavaBeans implementation has a much more detailed definition of method order that applies to an entire
+     * class. When ordering write methods for a single property, a much simpler comparator can be used because it is
+     * known that the method names are the same, the return parameters are both void and the methods only have a single
+     * parameter.
+     */
+    private static final Comparator<Method> WRITE_METHOD_COMPARATOR =
+            Comparator.comparing(m -> m.getParameterTypes()[0].getName());
+
     @Override
     BeanProperties getBeanProperties(Class<?> type) {
         return new BeanPropertiesStandalone(type);
@@ -39,7 +49,7 @@ class BeanSupportStandalone extends BeanSupport {
 
 
     private static PropertyDescriptor[] getPropertyDescriptors(Class<?> type) {
-        Map<String, PropertyDescriptor> pds = new HashMap<>();
+        Map<String,PropertyDescriptor> pds = new HashMap<>();
         Method[] methods = type.getMethods();
         for (Method method : methods) {
             if (!Modifier.isStatic(method.getModifiers())) {
@@ -74,7 +84,7 @@ class BeanSupportStandalone extends BeanSupport {
 
 
     private static String getPropertyName(String input) {
-        if (input.length() == 0) {
+        if (input.isEmpty()) {
             return null;
         }
         if (!Character.isUpperCase(input.charAt(0))) {
@@ -94,7 +104,7 @@ class BeanSupportStandalone extends BeanSupport {
         private boolean usesIs;
         private Method readMethod;
         private Method writeMethod;
-        private List<Method> writeMethods = new ArrayList<>();
+        private final List<Method> writeMethods = new ArrayList<>();
 
         String getName() {
             return name;
@@ -133,7 +143,10 @@ class BeanSupportStandalone extends BeanSupport {
                 if (readMethod != null) {
                     type = readMethod.getReturnType();
                 } else {
-                    type = writeMethods.get(0).getParameterTypes()[0];
+                    if (writeMethods.size() > 1) {
+                        writeMethods.sort(WRITE_METHOD_COMPARATOR);
+                    }
+                    type = writeMethods.getFirst().getParameterTypes()[0];
                 }
                 for (Method candidate : writeMethods) {
                     if (type.isAssignableFrom(candidate.getParameterTypes()[0])) {
@@ -166,17 +179,15 @@ class BeanSupportStandalone extends BeanSupport {
         }
 
         private void populateFromInterfaces(Class<?> aClass) {
-            Class<?> interfaces[] = aClass.getInterfaces();
-            if (interfaces.length > 0) {
-                for (Class<?> ifs : interfaces) {
-                    PropertyDescriptor[] pds = getPropertyDescriptors(type);
-                    for (PropertyDescriptor pd : pds) {
-                        if (!this.properties.containsKey(pd.getName())) {
-                            this.properties.put(pd.getName(), new BeanPropertyStandalone(this.type, pd));
-                        }
+            Class<?>[] interfaces = aClass.getInterfaces();
+            for (Class<?> ifs : interfaces) {
+                PropertyDescriptor[] pds = getPropertyDescriptors(type);
+                for (PropertyDescriptor pd : pds) {
+                    if (!this.properties.containsKey(pd.getName())) {
+                        this.properties.put(pd.getName(), new BeanPropertyStandalone(this.type, pd));
                     }
-                    populateFromInterfaces(ifs);
                 }
+                populateFromInterfaces(ifs);
             }
             Class<?> superclass = aClass.getSuperclass();
             if (superclass != null) {
@@ -212,6 +223,15 @@ class BeanSupportStandalone extends BeanSupport {
         @Override
         Method getWriteMethod() {
             return writeMethod;
+        }
+    }
+
+
+    static final class WriteMethodComparator implements Comparator<Method> {
+
+        @Override
+        public int compare(Method m1, Method m2) {
+            return 0;
         }
     }
 }
