@@ -17,6 +17,7 @@
 package org.apache.catalina.connector;
 
 import java.io.BufferedReader;
+import java.io.EOFException;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
@@ -34,6 +35,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.ConcurrentHashMap;
@@ -64,7 +66,6 @@ import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
 import jakarta.servlet.http.HttpUpgradeHandler;
 import jakarta.servlet.http.Part;
-import jakarta.servlet.http.PushBuilder;
 
 import org.apache.catalina.Container;
 import org.apache.catalina.Context;
@@ -78,7 +79,6 @@ import org.apache.catalina.Wrapper;
 import org.apache.catalina.core.ApplicationFilterChain;
 import org.apache.catalina.core.ApplicationMapping;
 import org.apache.catalina.core.ApplicationPart;
-import org.apache.catalina.core.ApplicationPushBuilder;
 import org.apache.catalina.core.ApplicationSessionCookieConfig;
 import org.apache.catalina.core.AsyncContextImpl;
 import org.apache.catalina.mapper.MappingData;
@@ -87,6 +87,7 @@ import org.apache.catalina.util.RequestUtil;
 import org.apache.catalina.util.TLSUtil;
 import org.apache.catalina.util.URLEncoder;
 import org.apache.coyote.ActionCode;
+import org.apache.coyote.BadRequestException;
 import org.apache.coyote.UpgradeToken;
 import org.apache.coyote.http11.upgrade.InternalHttpUpgradeHandler;
 import org.apache.juli.logging.Log;
@@ -96,24 +97,24 @@ import org.apache.tomcat.util.ExceptionUtils;
 import org.apache.tomcat.util.buf.B2CConverter;
 import org.apache.tomcat.util.buf.ByteChunk;
 import org.apache.tomcat.util.buf.CharsetHolder;
-import org.apache.tomcat.util.buf.EncodedSolidusHandling;
 import org.apache.tomcat.util.buf.MessageBytes;
 import org.apache.tomcat.util.buf.StringUtils;
-import org.apache.tomcat.util.buf.UDecoder;
 import org.apache.tomcat.util.http.CookieProcessor;
 import org.apache.tomcat.util.http.FastHttpDateFormat;
+import org.apache.tomcat.util.http.InvalidParameterException;
 import org.apache.tomcat.util.http.Parameters;
-import org.apache.tomcat.util.http.Parameters.FailReason;
 import org.apache.tomcat.util.http.Rfc6265CookieProcessor;
 import org.apache.tomcat.util.http.ServerCookie;
 import org.apache.tomcat.util.http.ServerCookies;
 import org.apache.tomcat.util.http.fileupload.FileItem;
 import org.apache.tomcat.util.http.fileupload.FileUpload;
 import org.apache.tomcat.util.http.fileupload.disk.DiskFileItemFactory;
+import org.apache.tomcat.util.http.fileupload.impl.FileCountLimitExceededException;
 import org.apache.tomcat.util.http.fileupload.impl.InvalidContentTypeException;
 import org.apache.tomcat.util.http.fileupload.impl.SizeException;
 import org.apache.tomcat.util.http.fileupload.servlet.ServletRequestContext;
 import org.apache.tomcat.util.http.parser.AcceptLanguage;
+import org.apache.tomcat.util.http.parser.MediaType;
 import org.apache.tomcat.util.http.parser.Upgrade;
 import org.apache.tomcat.util.net.SSLSupport;
 import org.apache.tomcat.util.res.StringManager;
@@ -122,9 +123,6 @@ import org.ietf.jgss.GSSException;
 
 /**
  * Wrapper object for the Coyote request.
- *
- * @author Remy Maucherat
- * @author Craig R. McClanahan
  */
 public class Request implements HttpServletRequest {
 
@@ -135,32 +133,31 @@ public class Request implements HttpServletRequest {
     /**
      * Create a new Request object associated with the given Connector.
      *
-     * @param connector The Connector with which this Request object will always be associated. In normal usage this
-     *                      must be non-null. In some test scenarios, it may be possible to use a null Connector without
-     *                      triggering an NPE.
+     * @param connector     The Connector with which this Request object will always be associated. In normal usage this
+     *                          must be non-null. In some test scenarios, it may be possible to use a null Connector
+     *                          without triggering an NPE.
+     * @param coyoteRequest The Coyote request with which this Request object will always be associated. In normal usage
+     *                          this must be non-null. In some test scenarios, it may be possible to use a null request
+     *                          without triggering an NPE.
      */
-    public Request(Connector connector) {
+    public Request(Connector connector, org.apache.coyote.Request coyoteRequest) {
         this.connector = connector;
+        if (connector != null) {
+            maxParameterCount = connector.getMaxParameterCount();
+            maxPartCount = connector.getMaxPartCount();
+            maxPartHeaderSize = connector.getMaxPartHeaderSize();
+        }
+        this.coyoteRequest = coyoteRequest;
+        inputBuffer = new InputBuffer(coyoteRequest);
     }
 
 
     // ------------------------------------------------------------- Properties
 
-
     /**
      * Coyote request.
      */
-    protected org.apache.coyote.Request coyoteRequest;
-
-    /**
-     * Set the Coyote request.
-     *
-     * @param coyoteRequest The Coyote request
-     */
-    public void setCoyoteRequest(org.apache.coyote.Request coyoteRequest) {
-        this.coyoteRequest = coyoteRequest;
-        inputBuffer.setRequest(coyoteRequest);
-    }
+    protected final org.apache.coyote.Request coyoteRequest;
 
     /**
      * Get the Coyote request.
@@ -195,7 +192,7 @@ public class Request implements HttpServletRequest {
     /**
      * The attributes associated with this Request, keyed by attribute name.
      */
-    private final Map<String, Object> attributes = new ConcurrentHashMap<>();
+    private final Map<String,Object> attributes = new ConcurrentHashMap<>();
 
 
     /**
@@ -214,7 +211,7 @@ public class Request implements HttpServletRequest {
     /**
      * Internal notes associated with this request by Catalina components and event listeners.
      */
-    private final transient HashMap<String, Object> notes = new HashMap<>();
+    private final transient HashMap<String,Object> notes = new HashMap<>();
 
 
     /**
@@ -232,19 +229,19 @@ public class Request implements HttpServletRequest {
     /**
      * The associated input buffer.
      */
-    protected final InputBuffer inputBuffer = new InputBuffer();
+    protected final InputBuffer inputBuffer;
 
 
     /**
      * ServletInputStream.
      */
-    protected CoyoteInputStream inputStream = new CoyoteInputStream(inputBuffer);
+    protected CoyoteInputStream inputStream;
 
 
     /**
      * Reader.
      */
-    protected CoyoteReader reader = new CoyoteReader(inputBuffer);
+    protected CoyoteReader reader;
 
 
     /**
@@ -305,7 +302,13 @@ public class Request implements HttpServletRequest {
     /**
      * Hash map used in the getParametersMap method.
      */
-    protected ParameterMap<String, String[]> parameterMap = new ParameterMap<>();
+    protected ParameterMap<String,String[]> parameterMap = new ParameterMap<>();
+
+
+    /**
+     * The exception thrown, if any when parsing the parameters including parts.
+     */
+    protected IllegalStateException parametersParseException = null;
 
 
     /**
@@ -410,14 +413,22 @@ public class Request implements HttpServletRequest {
 
     private HttpServletRequest applicationRequest = null;
 
+    /**
+     * The maximum number of request parameters
+     */
+    private int maxParameterCount = -1;
+
+    private int maxPartCount = -1;
+
+    private int maxPartHeaderSize = -1;
 
     // --------------------------------------------------------- Public Methods
 
-    protected void addPathParameter(String name, String value) {
+    public void addPathParameter(String name, String value) {
         coyoteRequest.addPathParameter(name, value);
     }
 
-    protected String getPathParameter(String name) {
+    public String getPathParameter(String name) {
         return coyoteRequest.getPathParameter(name);
     }
 
@@ -440,16 +451,27 @@ public class Request implements HttpServletRequest {
         userPrincipal = null;
         subject = null;
         parametersParsed = false;
+        if (connector != null) {
+            maxParameterCount = connector.getMaxParameterCount();
+            maxPartCount = connector.getMaxPartCount();
+            maxPartHeaderSize = connector.getMaxPartHeaderSize();
+        } else {
+            maxParameterCount = -1;
+            maxPartCount = -1;
+            maxPartHeaderSize = -1;
+        }
         if (parts != null) {
             for (Part part : parts) {
                 try {
                     part.delete();
-                } catch (IOException ignored) {
-                    // ApplicationPart.delete() never throws an IOEx
+                } catch (Throwable t) {
+                    ExceptionUtils.handleThrowable(t);
+                    log.warn(sm.getString("coyoteRequest.deletePartFailed", part.getName()), t);
                 }
             }
             parts = null;
         }
+        parametersParseException = null;
         partsParseException = null;
         locales.clear();
         localesParsed = false;
@@ -498,12 +520,12 @@ public class Request implements HttpServletRequest {
         asyncSupported = null;
         if (asyncContext != null) {
             asyncContext.recycle();
+            asyncContext = null;
         }
-        asyncContext = null;
     }
 
 
-    protected void recycleSessionInfo() {
+    public void recycleSessionInfo() {
         if (session != null) {
             try {
                 session.endAccess();
@@ -565,7 +587,7 @@ public class Request implements HttpServletRequest {
      *             this request
      */
     public boolean getDiscardFacades() {
-        return (connector == null) ? true : connector.getDiscardFacades();
+        return connector == null || connector.getDiscardFacades();
     }
 
 
@@ -658,12 +680,12 @@ public class Request implements HttpServletRequest {
     /**
      * The response with which this request is associated.
      */
-    protected org.apache.catalina.connector.Response response = null;
+    protected Response response = null;
 
     /**
      * @return the Response with which this Request is associated.
      */
-    public org.apache.catalina.connector.Response getResponse() {
+    public Response getResponse() {
         return this.response;
     }
 
@@ -672,7 +694,7 @@ public class Request implements HttpServletRequest {
      *
      * @param response The new associated response
      */
-    public void setResponse(org.apache.catalina.connector.Response response) {
+    public void setResponse(Response response) {
         this.response = response;
     }
 
@@ -827,13 +849,38 @@ public class Request implements HttpServletRequest {
     }
 
 
-    // ------------------------------------------------- ServletRequest Methods
+    /**
+     * Set the maximum number of request parameters (GET plus POST including multipart) for a single request.
+     *
+     * @param maxParameterCount The maximum number of request parameters
+     */
+    public void setMaxParameterCount(int maxParameterCount) {
+        this.maxParameterCount = maxParameterCount;
+    }
+
 
     /**
-     * @return the specified request attribute if it exists; otherwise, return <code>null</code>.
+     * Set the maximum number of parts for a single multipart request.
      *
-     * @param name Name of the request attribute to return
+     * @param maxPartCount The maximum number of request parts
      */
+    public void setMaxPartCount(int maxPartCount) {
+        this.maxPartCount = maxPartCount;
+    }
+
+
+    /**
+     * Set the maximum header size per part for a single multipart request.
+     *
+     * @param maxPartHeaderSize The maximum size of the headers for one part
+     */
+    public void setMaxPartHeaderSize(int maxPartHeaderSize) {
+        this.maxPartHeaderSize = maxPartHeaderSize;
+    }
+
+
+    // ------------------------------------------------- ServletRequest Methods
+
     @Override
     public Object getAttribute(String name) {
         // Special attributes
@@ -858,6 +905,10 @@ public class Request implements HttpServletRequest {
             if (attr != null) {
                 attributes.put(Globals.CERTIFICATES_ATTR, attr);
             }
+            attr = coyoteRequest.getAttribute(Globals.SECURE_PROTOCOL_ATTR);
+            if (attr != null) {
+                attributes.put(Globals.SECURE_PROTOCOL_ATTR, attr);
+            }
             attr = coyoteRequest.getAttribute(Globals.CIPHER_SUITE_ATTR);
             if (attr != null) {
                 attributes.put(Globals.CIPHER_SUITE_ATTR, attr);
@@ -873,10 +924,6 @@ public class Request implements HttpServletRequest {
             attr = coyoteRequest.getAttribute(Globals.SSL_SESSION_MGR_ATTR);
             if (attr != null) {
                 attributes.put(Globals.SSL_SESSION_MGR_ATTR, attr);
-            }
-            attr = coyoteRequest.getAttribute(SSLSupport.PROTOCOL_VERSION_KEY);
-            if (attr != null) {
-                attributes.put(SSLSupport.PROTOCOL_VERSION_KEY, attr);
             }
             attr = coyoteRequest.getAttribute(SSLSupport.REQUESTED_PROTOCOL_VERSIONS_KEY);
             if (attr != null) {
@@ -900,20 +947,21 @@ public class Request implements HttpServletRequest {
 
 
     /**
-     * Return the names of all request attributes for this Request, or an empty <code>Enumeration</code> if there are
-     * none. Note that the attribute names returned will only be those for the attributes set via
-     * {@link #setAttribute(String, Object)}. Tomcat internal attributes will not be included although they are
-     * accessible via {@link #getAttribute(String)}. The Tomcat internal attributes include:
+     * {@inheritDoc}
+     * <p>
+     * The attribute names returned will only be those for the attributes set via {@link #setAttribute(String, Object)}.
+     * Tomcat internal attributes will not be included even though they are accessible via
+     * {@link #getAttribute(String)}. The Tomcat internal attributes include:
      * <ul>
      * <li>{@link Globals#DISPATCHER_TYPE_ATTR}</li>
      * <li>{@link Globals#DISPATCHER_REQUEST_PATH_ATTR}</li>
      * <li>{@link Globals#ASYNC_SUPPORTED_ATTR}</li>
      * <li>{@link Globals#CERTIFICATES_ATTR} (SSL connections only)</li>
+     * <li>{@link Globals#SECURE_PROTOCOL_ATTR} (SSL connections only)</li>
      * <li>{@link Globals#CIPHER_SUITE_ATTR} (SSL connections only)</li>
      * <li>{@link Globals#KEY_SIZE_ATTR} (SSL connections only)</li>
      * <li>{@link Globals#SSL_SESSION_ID_ATTR} (SSL connections only)</li>
      * <li>{@link Globals#SSL_SESSION_MGR_ATTR} (SSL connections only)</li>
-     * <li>{@link Globals#PARAMETER_PARSE_FAILED_ATTR}</li>
      * </ul>
      * The underlying connector may also expose request attributes. These all have names starting with
      * "org.apache.tomcat" and include:
@@ -922,8 +970,6 @@ public class Request implements HttpServletRequest {
      * </ul>
      * Connector implementations may return some, all or none of these attributes and may also support additional
      * attributes.
-     *
-     * @return the attribute names enumeration
      */
     @Override
     public Enumeration<String> getAttributeNames() {
@@ -937,9 +983,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the character encoding for this Request.
-     */
     @Override
     public String getCharacterEncoding() {
         String characterEncoding = coyoteRequest.getCharsetHolder().getName();
@@ -973,18 +1016,12 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the content length for this Request.
-     */
     @Override
     public int getContentLength() {
         return coyoteRequest.getContentLength();
     }
 
 
-    /**
-     * @return the content type for this Request.
-     */
     @Override
     public String getContentType() {
         return coyoteRequest.getContentType();
@@ -1001,13 +1038,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the servlet input stream for this Request. The default implementation returns a servlet input stream
-     *             created by <code>createInputStream()</code>.
-     *
-     * @exception IllegalStateException if <code>getReader()</code> has already been called for this request
-     * @exception IOException           if an input/output error occurs
-     */
     @Override
     public ServletInputStream getInputStream() throws IOException {
 
@@ -1024,11 +1054,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the preferred Locale that the client will accept content in, based on the value for the first
-     *             <code>Accept-Language</code> header that was encountered. If the request did not specify a preferred
-     *             language, the server's default Locale is returned.
-     */
     @Override
     public Locale getLocale() {
 
@@ -1036,19 +1061,14 @@ public class Request implements HttpServletRequest {
             parseLocales();
         }
 
-        if (locales.size() > 0) {
-            return locales.get(0);
+        if (!locales.isEmpty()) {
+            return locales.getFirst();
         }
 
         return defaultLocale;
     }
 
 
-    /**
-     * @return the set of preferred Locales that the client will accept content in, based on the values for any
-     *             <code>Accept-Language</code> headers that were encountered. If the request did not specify a
-     *             preferred language, the server's default Locale is returned.
-     */
     @Override
     public Enumeration<Locale> getLocales() {
 
@@ -1056,7 +1076,7 @@ public class Request implements HttpServletRequest {
             parseLocales();
         }
 
-        if (locales.size() > 0) {
+        if (!locales.isEmpty()) {
             return Collections.enumeration(locales);
         }
         ArrayList<Locale> results = new ArrayList<>();
@@ -1066,32 +1086,15 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the value of the specified request parameter, if any; otherwise, return <code>null</code>. If there is
-     *             more than one value defined, return only the first one.
-     *
-     * @param name Name of the desired request parameter
-     */
     @Override
     public String getParameter(String name) {
-
-        if (!parametersParsed) {
-            parseParameters();
-        }
-
+        parseParameters();
         return coyoteRequest.getParameters().getParameter(name);
-
     }
 
 
-    /**
-     * Returns a <code>Map</code> of the parameters of this request. Request parameters are extra information sent with
-     * the request. For HTTP servlets, parameters are contained in the query string or posted form data.
-     *
-     * @return A <code>Map</code> containing parameter names as keys and parameter values as map values.
-     */
     @Override
-    public Map<String, String[]> getParameterMap() {
+    public Map<String,String[]> getParameterMap() {
 
         if (parameterMap.isLocked()) {
             return parameterMap;
@@ -1107,60 +1110,29 @@ public class Request implements HttpServletRequest {
         parameterMap.setLocked(true);
 
         return parameterMap;
-
     }
 
 
-    /**
-     * @return the names of all defined request parameters for this request.
-     */
     @Override
     public Enumeration<String> getParameterNames() {
-
-        if (!parametersParsed) {
-            parseParameters();
-        }
-
+        parseParameters();
         return coyoteRequest.getParameters().getParameterNames();
-
     }
 
 
-    /**
-     * @return the defined values for the specified request parameter, if any; otherwise, return <code>null</code>.
-     *
-     * @param name Name of the desired request parameter
-     */
     @Override
     public String[] getParameterValues(String name) {
-
-        if (!parametersParsed) {
-            parseParameters();
-        }
-
+        parseParameters();
         return coyoteRequest.getParameters().getParameterValues(name);
-
     }
 
 
-    /**
-     * @return the protocol and version used to make this Request.
-     */
     @Override
     public String getProtocol() {
-        return coyoteRequest.protocol().toString();
+        return coyoteRequest.protocol().toStringType();
     }
 
 
-    /**
-     * Read the Reader wrapping the input stream for this Request. The default implementation wraps a
-     * <code>BufferedReader</code> around the servlet input stream returned by <code>createInputStream()</code>.
-     *
-     * @return a buffered reader for the request
-     *
-     * @exception IllegalStateException if <code>getInputStream()</code> has already been called for this request
-     * @exception IOException           if an input/output error occurs
-     */
     @Override
     public BufferedReader getReader() throws IOException {
 
@@ -1196,9 +1168,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the remote IP address making this Request.
-     */
     @Override
     public String getRemoteAddr() {
         if (remoteAddr == null) {
@@ -1221,9 +1190,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the remote host name making this Request.
-     */
     @Override
     public String getRemoteHost() {
         if (remoteHost == null) {
@@ -1237,9 +1203,6 @@ public class Request implements HttpServletRequest {
         return remoteHost;
     }
 
-    /**
-     * @return the Internet Protocol (IP) source port of the client or last proxy that sent the request.
-     */
     @Override
     public int getRemotePort() {
         if (remotePort == -1) {
@@ -1249,9 +1212,6 @@ public class Request implements HttpServletRequest {
         return remotePort;
     }
 
-    /**
-     * @return the host name of the Internet Protocol (IP) interface on which the request was received.
-     */
     @Override
     public String getLocalName() {
         if (localName == null) {
@@ -1261,9 +1221,6 @@ public class Request implements HttpServletRequest {
         return localName;
     }
 
-    /**
-     * @return the Internet Protocol (IP) address of the interface on which the request was received.
-     */
     @Override
     public String getLocalAddr() {
         if (localAddr == null) {
@@ -1274,9 +1231,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the Internet Protocol (IP) port number of the interface on which the request was received.
-     */
     @Override
     public int getLocalPort() {
         if (localPort == -1) {
@@ -1286,12 +1240,6 @@ public class Request implements HttpServletRequest {
         return localPort;
     }
 
-    /**
-     * @return a RequestDispatcher that wraps the resource at the specified path, which may be interpreted as relative
-     *             to the current request path.
-     *
-     * @param path Path of the resource to be wrapped
-     */
     @Override
     public RequestDispatcher getRequestDispatcher(String path) {
 
@@ -1337,7 +1285,7 @@ public class Request implements HttpServletRequest {
 
         // Add the path info, if there is any
         String pathInfo = getPathInfo();
-        String requestPath = null;
+        String requestPath;
 
         if (pathInfo == null) {
             requestPath = servletPath;
@@ -1346,7 +1294,7 @@ public class Request implements HttpServletRequest {
         }
 
         int pos = requestPath.lastIndexOf('/');
-        String relative = null;
+        String relative;
         if (context.getDispatchersUseEncodedPaths()) {
             if (pos >= 0) {
                 relative = URLEncoder.DEFAULT.encode(requestPath.substring(0, pos + 1), StandardCharsets.UTF_8) + path;
@@ -1365,47 +1313,30 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the scheme used to make this Request.
-     */
     @Override
     public String getScheme() {
-        return coyoteRequest.scheme().toString();
+        return coyoteRequest.scheme().toStringType();
     }
 
 
-    /**
-     * @return the server name responding to this Request.
-     */
     @Override
     public String getServerName() {
         return coyoteRequest.serverName().toString();
     }
 
 
-    /**
-     * @return the server port responding to this Request.
-     */
     @Override
     public int getServerPort() {
         return coyoteRequest.getServerPort();
     }
 
 
-    /**
-     * @return <code>true</code> if this request was received on a secure connection.
-     */
     @Override
     public boolean isSecure() {
         return secure;
     }
 
 
-    /**
-     * Remove the specified request attribute if it exists.
-     *
-     * @param name Name of the request attribute to remove
-     */
     @Override
     public void removeAttribute(String name) {
         // Remove the specified attribute
@@ -1425,12 +1356,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * Set the specified request attribute to the specified value.
-     *
-     * @param name  Name of the request attribute to set
-     * @param value The associated value
-     */
     @Override
     public void setAttribute(String name, Object value) {
 
@@ -1477,12 +1402,12 @@ public class Request implements HttpServletRequest {
         if (context == null) {
             return;
         }
-        Object listeners[] = context.getApplicationEventListeners();
-        if ((listeners == null) || (listeners.length == 0)) {
+        Object[] listeners = context.getApplicationEventListeners();
+        if (listeners == null || listeners.length == 0) {
             return;
         }
         boolean replaced = (oldValue != null);
-        ServletRequestAttributeEvent event = null;
+        ServletRequestAttributeEvent event;
         if (replaced) {
             event = new ServletRequestAttributeEvent(context.getServletContext(), getRequest(), name, oldValue);
         } else {
@@ -1490,10 +1415,9 @@ public class Request implements HttpServletRequest {
         }
 
         for (Object o : listeners) {
-            if (!(o instanceof ServletRequestAttributeListener)) {
+            if (!(o instanceof ServletRequestAttributeListener listener)) {
                 continue;
             }
-            ServletRequestAttributeListener listener = (ServletRequestAttributeListener) o;
             try {
                 if (replaced) {
                     listener.attributeReplaced(event);
@@ -1518,17 +1442,16 @@ public class Request implements HttpServletRequest {
      */
     private void notifyAttributeRemoved(String name, Object value) {
         Context context = getContext();
-        Object listeners[] = context.getApplicationEventListeners();
-        if ((listeners == null) || (listeners.length == 0)) {
+        Object[] listeners = context.getApplicationEventListeners();
+        if (listeners == null || listeners.length == 0) {
             return;
         }
-        ServletRequestAttributeEvent event = new ServletRequestAttributeEvent(context.getServletContext(), getRequest(),
-                name, value);
+        ServletRequestAttributeEvent event =
+                new ServletRequestAttributeEvent(context.getServletContext(), getRequest(), name, value);
         for (Object o : listeners) {
-            if (!(o instanceof ServletRequestAttributeListener)) {
+            if (!(o instanceof ServletRequestAttributeListener listener)) {
                 continue;
             }
-            ServletRequestAttributeListener listener = (ServletRequestAttributeListener) o;
             try {
                 listener.attributeRemoved(event);
             } catch (Throwable t) {
@@ -1541,16 +1464,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * Overrides the name of the character encoding used in the body of this request. This method must be called prior
-     * to reading request parameters or reading input using <code>getReader()</code>.
-     *
-     * @param enc The character encoding to be used
-     *
-     * @exception UnsupportedEncodingException if the specified encoding is not supported
-     *
-     * @since Servlet 2.3
-     */
     @Override
     public void setCharacterEncoding(String enc) throws UnsupportedEncodingException {
 
@@ -1694,11 +1607,7 @@ public class Request implements HttpServletRequest {
 
     @Override
     public DispatcherType getDispatcherType() {
-        if (internalDispatcherType == null) {
-            return DispatcherType.REQUEST;
-        }
-
-        return this.internalDispatcherType;
+        return Objects.requireNonNullElse(internalDispatcherType, DispatcherType.REQUEST);
     }
 
 
@@ -1892,36 +1801,19 @@ public class Request implements HttpServletRequest {
 
 
     @Override
-    public Map<String, String> getTrailerFields() {
+    public Map<String,String> getTrailerFields() {
         if (!isTrailerFieldsReady()) {
             throw new IllegalStateException(sm.getString("coyoteRequest.trailersNotReady"));
         }
-        Map<String, String> result = new HashMap<>(coyoteRequest.getTrailerFields());
-        return result;
-    }
-
-
-    @Override
-    public PushBuilder newPushBuilder() {
-        return newPushBuilder(this);
-    }
-
-
-    public PushBuilder newPushBuilder(HttpServletRequest request) {
-        AtomicBoolean result = new AtomicBoolean();
-        coyoteRequest.action(ActionCode.IS_PUSH_SUPPORTED, result);
-        if (result.get()) {
-            return new ApplicationPushBuilder(this, request);
-        } else {
-            return null;
-        }
+        // No need for a defensive copy since a new Map is returned for every call.
+        return coyoteRequest.getTrailerFields();
     }
 
 
     @SuppressWarnings("unchecked")
     @Override
     public <T extends HttpUpgradeHandler> T upgrade(Class<T> httpUpgradeHandlerClass)
-            throws java.io.IOException, ServletException {
+            throws IOException, ServletException {
         T handler;
         InstanceManager instanceManager = null;
         try {
@@ -1959,7 +1851,7 @@ public class Request implements HttpServletRequest {
             // is the protocol that must have been selected
             List<Upgrade> upgradeProtocols = Upgrade.parse(getHeaders(HTTP_UPGRADE_HEADER_NAME));
             if (upgradeProtocols != null && upgradeProtocols.size() == 1) {
-                result = upgradeProtocols.get(0).toString();
+                result = upgradeProtocols.getFirst().toString();
             }
         }
 
@@ -1971,9 +1863,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * Return the authentication type used for this Request.
-     */
     @Override
     public String getAuthType() {
         return authType;
@@ -1981,130 +1870,16 @@ public class Request implements HttpServletRequest {
 
 
     /**
-     * Return the portion of the request URI used to select the Context of the Request. The value returned is not
-     * decoded which also implies it is not normalised.
+     * {@inheritDoc}
+     * <p>
+     * Tomcat returns the canonical context path for the web application.
      */
     @Override
     public String getContextPath() {
-        int lastSlash = mappingData.contextSlashCount;
-        // Special case handling for the root context
-        if (lastSlash == 0) {
-            return "";
-        }
-
-        String canonicalContextPath = getServletContext().getContextPath();
-
-        String uri = getRequestURI();
-        int pos = 0;
-        if (!getContext().getAllowMultipleLeadingForwardSlashInPath()) {
-            // Ensure that the returned value only starts with a single '/'.
-            // This prevents the value being misinterpreted as a protocol-
-            // relative URI if used with sendRedirect().
-            do {
-                pos++;
-            } while (pos < uri.length() && uri.charAt(pos) == '/');
-            pos--;
-            uri = uri.substring(pos);
-        }
-
-        char[] uriChars = uri.toCharArray();
-        // Need at least the number of slashes in the context path
-        while (lastSlash > 0) {
-            pos = nextSlash(uriChars, pos + 1);
-            if (pos == -1) {
-                break;
-            }
-            lastSlash--;
-        }
-        // Now allow for path parameters, normalization and/or encoding.
-        // Essentially, keep extending the candidate path up to the next slash
-        // until the decoded and normalized candidate path (with the path
-        // parameters removed) is the same as the canonical path.
-        String candidate;
-        if (pos == -1) {
-            candidate = uri;
-        } else {
-            candidate = uri.substring(0, pos);
-        }
-        candidate = removePathParameters(candidate);
-        candidate = UDecoder.URLDecode(candidate, connector.getURICharset());
-        candidate = org.apache.tomcat.util.http.RequestUtil.normalize(candidate);
-        boolean match = canonicalContextPath.equals(candidate);
-        while (!match && pos != -1) {
-            pos = nextSlash(uriChars, pos + 1);
-            if (pos == -1) {
-                candidate = uri;
-            } else {
-                candidate = uri.substring(0, pos);
-            }
-            candidate = removePathParameters(candidate);
-            candidate = UDecoder.URLDecode(candidate, connector.getURICharset());
-            candidate = org.apache.tomcat.util.http.RequestUtil.normalize(candidate);
-            match = canonicalContextPath.equals(candidate);
-        }
-        if (match) {
-            if (pos == -1) {
-                return uri;
-            } else {
-                return uri.substring(0, pos);
-            }
-        } else {
-            // Should never happen
-            throw new IllegalStateException(
-                    sm.getString("coyoteRequest.getContextPath.ise", canonicalContextPath, uri));
-        }
+        return getContext().getPath();
     }
 
 
-    private String removePathParameters(String input) {
-        int nextSemiColon = input.indexOf(';');
-        // Shortcut
-        if (nextSemiColon == -1) {
-            return input;
-        }
-        StringBuilder result = new StringBuilder(input.length());
-        result.append(input.substring(0, nextSemiColon));
-        while (true) {
-            int nextSlash = input.indexOf('/', nextSemiColon);
-            if (nextSlash == -1) {
-                break;
-            }
-            nextSemiColon = input.indexOf(';', nextSlash);
-            if (nextSemiColon == -1) {
-                result.append(input.substring(nextSlash));
-                break;
-            } else {
-                result.append(input.substring(nextSlash, nextSemiColon));
-            }
-        }
-
-        return result.toString();
-    }
-
-
-    private int nextSlash(char[] uri, int startPos) {
-        int len = uri.length;
-        int pos = startPos;
-        while (pos < len) {
-            if (uri[pos] == '/') {
-                return pos;
-            } else if (connector.getEncodedSolidusHandlingInternal() == EncodedSolidusHandling.DECODE &&
-                    uri[pos] == '%' && pos + 2 < len && uri[pos + 1] == '2' &&
-                    (uri[pos + 2] == 'f' || uri[pos + 2] == 'F')) {
-                return pos;
-            }
-            pos++;
-        }
-        return -1;
-    }
-
-
-    /**
-     * Return the set of Cookies received with this Request. Triggers parsing of the Cookie HTTP headers followed by
-     * conversion to Cookie objects if this has not already been performed.
-     *
-     * @return the array of cookies
-     */
     @Override
     public Cookie[] getCookies() {
         if (!cookiesConverted) {
@@ -2126,15 +1901,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * Return the value of the specified date header, if any; otherwise return -1.
-     *
-     * @param name Name of the requested date header
-     *
-     * @return the date as a long
-     *
-     * @exception IllegalArgumentException if the specified header value cannot be converted to a date
-     */
     @Override
     public long getDateHeader(String name) {
 
@@ -2153,50 +1919,24 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * Return the first value of the specified header, if any; otherwise, return <code>null</code>
-     *
-     * @param name Name of the requested header
-     *
-     * @return the header value
-     */
     @Override
     public String getHeader(String name) {
         return coyoteRequest.getHeader(name);
     }
 
 
-    /**
-     * Return all of the values of the specified header, if any; otherwise, return an empty enumeration.
-     *
-     * @param name Name of the requested header
-     *
-     * @return the enumeration with the header values
-     */
     @Override
     public Enumeration<String> getHeaders(String name) {
         return coyoteRequest.getMimeHeaders().values(name);
     }
 
 
-    /**
-     * @return the names of all headers received with this request.
-     */
     @Override
     public Enumeration<String> getHeaderNames() {
         return coyoteRequest.getMimeHeaders().names();
     }
 
 
-    /**
-     * Return the value of the specified header as an integer, or -1 if there is no such header for this request.
-     *
-     * @param name Name of the requested header
-     *
-     * @return the header value as an int
-     *
-     * @exception IllegalArgumentException if the specified header value cannot be converted to an integer
-     */
     @Override
     public int getIntHeader(String name) {
 
@@ -2215,27 +1955,18 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the HTTP request method used in this Request.
-     */
     @Override
     public String getMethod() {
-        return coyoteRequest.method().toString();
+        return coyoteRequest.getMethod();
     }
 
 
-    /**
-     * @return the path information associated with this Request.
-     */
     @Override
     public String getPathInfo() {
-        return mappingData.pathInfo.toString();
+        return mappingData.pathInfo.toStringType();
     }
 
 
-    /**
-     * @return the extra path information for this request, translated to a real path.
-     */
     @Override
     public String getPathTranslated() {
 
@@ -2252,18 +1983,12 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the query string associated with this request.
-     */
     @Override
     public String getQueryString() {
         return coyoteRequest.queryString().toString();
     }
 
 
-    /**
-     * @return the name of the remote user that has been authenticated for this Request.
-     */
     @Override
     public String getRemoteUser() {
 
@@ -2285,21 +2010,15 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the session identifier included in this request, if any.
-     */
     @Override
     public String getRequestedSessionId() {
         return requestedSessionId;
     }
 
 
-    /**
-     * @return the request URI for this request.
-     */
     @Override
     public String getRequestURI() {
-        return coyoteRequest.requestURI().toString();
+        return coyoteRequest.requestURI().toStringType();
     }
 
 
@@ -2309,34 +2028,18 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the portion of the request URI used to select the servlet that will process this request.
-     */
     @Override
     public String getServletPath() {
-        return mappingData.wrapperPath.toString();
+        return mappingData.wrapperPath.toStringType();
     }
 
 
-    /**
-     * @return the session associated with this Request, creating one if necessary.
-     */
     @Override
     public HttpSession getSession() {
-        Session session = doGetSession(true);
-        if (session == null) {
-            return null;
-        }
-
-        return session.getSession();
+        return getSession(true);
     }
 
 
-    /**
-     * @return the session associated with this Request, creating one if necessary and requested.
-     *
-     * @param create Create a new session if one does not exist
-     */
     @Override
     public HttpSession getSession(boolean create) {
         Session session = doGetSession(create);
@@ -2348,9 +2051,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return <code>true</code> if the session identifier included in this request came from a cookie.
-     */
     @Override
     public boolean isRequestedSessionIdFromCookie() {
 
@@ -2362,9 +2062,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return <code>true</code> if the session identifier included in this request came from the request URI.
-     */
     @Override
     public boolean isRequestedSessionIdFromURL() {
 
@@ -2376,9 +2073,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return <code>true</code> if the session identifier included in this request identifies a valid session.
-     */
     @Override
     public boolean isRequestedSessionIdValid() {
 
@@ -2391,46 +2085,48 @@ public class Request implements HttpServletRequest {
             return false;
         }
 
-        Manager manager = context.getManager();
-        if (manager == null) {
-            return false;
-        }
-
-        Session session = null;
+        /*
+         * As per PR #594, the manager could be provided by the web application and calls to findSession() could trigger
+         * class loading so set the thread context class loader appropriately to avoid ClassNotFoundException.
+         */
+        ClassLoader originalClassLoader = context.bind(null);
         try {
-            session = manager.findSession(requestedSessionId);
-        } catch (IOException e) {
-            // Can't find the session
-        }
-
-        if ((session == null) || !session.isValid()) {
-            // Check for parallel deployment contexts
-            if (getMappingData().contexts == null) {
+            Manager manager = context.getManager();
+            if (manager == null) {
                 return false;
-            } else {
-                for (int i = (getMappingData().contexts.length); i > 0; i--) {
-                    Context ctxt = getMappingData().contexts[i - 1];
-                    try {
-                        if (ctxt.getManager().findSession(requestedSessionId) != null) {
-                            return true;
+            }
+
+            Session session = null;
+            try {
+                session = manager.findSession(requestedSessionId);
+            } catch (IOException ignore) {
+                // Error looking up session. Treat it as not found.
+            }
+
+            if ((session == null) || !session.isValid()) {
+                // Check for parallel deployment contexts
+                if (getMappingData().contexts != null) {
+                    for (int i = (getMappingData().contexts.length); i > 0; i--) {
+                        Context ctxt = getMappingData().contexts[i - 1];
+                        try {
+                            if (ctxt.getManager().findSession(requestedSessionId) != null) {
+                                return true;
+                            }
+                        } catch (IOException ignore) {
+                            // Error looking up session. Treat it as not found.
                         }
-                    } catch (IOException e) {
-                        // Ignore
                     }
                 }
                 return false;
             }
-        }
 
-        return true;
+            return true;
+        } finally {
+            context.unbind(originalClassLoader);
+        }
     }
 
 
-    /**
-     * @return <code>true</code> if the authenticated user principal possesses the specified role name.
-     *
-     * @param role Role name to be validated
-     */
     @Override
     public boolean isUserInRole(String role) {
 
@@ -2475,9 +2171,6 @@ public class Request implements HttpServletRequest {
     }
 
 
-    /**
-     * @return the principal that has been authenticated for this Request.
-     */
     @Override
     public Principal getUserPrincipal() {
         if (userPrincipal instanceof TomcatPrincipal) {
@@ -2537,7 +2230,7 @@ public class Request implements HttpServletRequest {
     public void changeSessionId(String newSessionId) {
         // This should only ever be called if there was an old session ID but
         // double check to be sure
-        if (requestedSessionId != null && requestedSessionId.length() > 0) {
+        if (requestedSessionId != null && !requestedSessionId.isEmpty()) {
             requestedSessionId = newSessionId;
         }
 
@@ -2547,7 +2240,7 @@ public class Request implements HttpServletRequest {
             return;
         }
 
-        if (response != null) {
+        if (response != null && context != null) {
             Cookie newCookie = ApplicationSessionCookieConfig.createSessionCookie(context, newSessionId, isSecure());
             response.addSessionCookieInternal(newCookie);
         }
@@ -2608,9 +2301,6 @@ public class Request implements HttpServletRequest {
         }
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
     public boolean authenticate(HttpServletResponse response) throws IOException, ServletException {
         if (response.isCommitted()) {
@@ -2620,9 +2310,6 @@ public class Request implements HttpServletRequest {
         return getContext().getAuthenticator().authenticate(this, response);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
     public void login(String username, String password) throws ServletException {
         if (getAuthType() != null || getRemoteUser() != null || getUserPrincipal() != null) {
@@ -2632,34 +2319,35 @@ public class Request implements HttpServletRequest {
         getContext().getAuthenticator().login(username, password, this);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
     public void logout() throws ServletException {
         getContext().getAuthenticator().logout(this);
     }
 
-    /**
-     * {@inheritDoc}
-     */
+
     @Override
     public Collection<Part> getParts() throws IOException, IllegalStateException, ServletException {
 
         parseParts(true);
 
         if (partsParseException != null) {
-            if (partsParseException instanceof IOException) {
-                throw (IOException) partsParseException;
-            } else if (partsParseException instanceof IllegalStateException) {
-                throw (IllegalStateException) partsParseException;
-            } else if (partsParseException instanceof ServletException) {
-                throw (ServletException) partsParseException;
+            Context context = getContext();
+            if (context != null && context.getLogger().isDebugEnabled()) {
+                context.getLogger()
+                        .debug(sm.getString("coyoteRequest.partsParseException", partsParseException.getMessage()));
+            }
+            switch (partsParseException) {
+                case IOException ioException -> throw ioException;
+                case IllegalStateException illegalStateException -> throw illegalStateException;
+                case ServletException servletException -> throw servletException;
+                default -> {
+                }
             }
         }
 
         return parts;
     }
+
 
     private void parseParts(boolean explicit) {
 
@@ -2678,138 +2366,174 @@ public class Request implements HttpServletRequest {
             } else {
                 if (explicit) {
                     partsParseException = new IllegalStateException(sm.getString("coyoteRequest.noMultipartConfig"));
-                    return;
                 } else {
                     parts = Collections.emptyList();
-                    return;
                 }
+                return;
             }
         }
 
-        int maxParameterCount = getConnector().getMaxParameterCount();
+        /*
+         * When the request body is multipart/form-data, both the parts and the query string count towards
+         * maxParameterCount. If parseParts() is called before getParameterXXX() then the parts will be parsed before
+         * the query string. Otherwise, the query string will be parsed first.
+         *
+         * maxParameterCount must be respected regardless of which is parsed first.
+         *
+         * maxParameterCount is reset from the Connector at the start of every request.
+         *
+         * If parts are parsed first, non-file parts will be added to the parameter map and any files will reduce
+         * maxParameterCount by 1 so that when the query string is parsed the difference between the size of the
+         * parameter map and maxParameterCount will be the original maxParameterCount less the number of parts. i.e. the
+         * maxParameterCount applied to the query string will be the original maxParameterCount less the number of
+         * parts.
+         *
+         * If the query string is parsed first, all parameters will be added to the parameter map and, ignoring
+         * maxPartCount, the part limit will be set to the original maxParameterCount less the size of the parameter
+         * map. i.e. the maxParameterCount applied to the parts will be the original maxParameterCount less the number
+         * of query parameters.
+         */
         Parameters parameters = coyoteRequest.getParameters();
         parameters.setLimit(maxParameterCount);
 
+        File location;
+        String locationStr = mce.getLocation();
+        if (locationStr == null || locationStr.isEmpty()) {
+            location = ((File) context.getServletContext().getAttribute(ServletContext.TEMPDIR));
+        } else {
+            // If relative, it is relative to TEMPDIR
+            location = new File(locationStr);
+            if (!location.isAbsolute()) {
+                location =
+                        new File((File) context.getServletContext().getAttribute(ServletContext.TEMPDIR), locationStr)
+                                .getAbsoluteFile();
+            }
+        }
+
+        if (!location.exists() && context.getCreateUploadTargets()) {
+            log.warn(sm.getString("coyoteRequest.uploadCreate", location.getAbsolutePath(),
+                    getMappingData().wrapper.getName()));
+            if (!location.mkdirs()) {
+                log.warn(sm.getString("coyoteRequest.uploadCreateFail", location.getAbsolutePath()));
+            }
+        }
+
+        if (!location.isDirectory()) {
+            partsParseException = new IOException(sm.getString("coyoteRequest.uploadLocationInvalid", location));
+            return;
+        }
+
+        // Create a new file upload handler
+        DiskFileItemFactory factory = new DiskFileItemFactory();
+        try {
+            factory.setRepository(location.getCanonicalFile());
+        } catch (IOException ioe) {
+            partsParseException = ioe;
+            return;
+        }
+        factory.setSizeThreshold(mce.getFileSizeThreshold());
+
+        FileUpload upload = new FileUpload();
+        upload.setFileItemFactory(factory);
+        upload.setFileSizeMax(mce.getMaxFileSize());
+        upload.setSizeMax(mce.getMaxRequestSize());
+        upload.setPartHeaderSizeMax(maxPartHeaderSize);
+        /*
+         * There are two independent limits on the number of parts.
+         *
+         * 1. The limit based on parameters. This is maxParameterCount less the number of parameters already processed.
+         *
+         * 2. The limit based on parts. This is maxPartCount.
+         *
+         * The lower of these two limits will be applied to this request.
+         *
+         * Note: Either of both limits may be set to -1 (unlimited).
+         */
+        int partLimit = maxParameterCount;
+        if (partLimit > -1) {
+            partLimit = partLimit - parameters.size();
+        }
+        int maxPartCount = this.maxPartCount;
+        if (maxPartCount > -1) {
+            if (partLimit < 0 || partLimit > maxPartCount) {
+                partLimit = maxPartCount;
+            }
+        }
+        upload.setFileCountMax(partLimit);
+
+        parts = new ArrayList<>();
+        List<FileItem> items = null;
         boolean success = false;
         try {
-            File location;
-            String locationStr = mce.getLocation();
-            if (locationStr == null || locationStr.length() == 0) {
-                location = ((File) context.getServletContext().getAttribute(ServletContext.TEMPDIR));
-            } else {
-                // If relative, it is relative to TEMPDIR
-                location = new File(locationStr);
-                if (!location.isAbsolute()) {
-                    location = new File((File) context.getServletContext().getAttribute(ServletContext.TEMPDIR),
-                            locationStr).getAbsoluteFile();
-                }
-            }
-
-            if (!location.exists() && context.getCreateUploadTargets()) {
-                log.warn(sm.getString("coyoteRequest.uploadCreate", location.getAbsolutePath(),
-                        getMappingData().wrapper.getName()));
-                if (!location.mkdirs()) {
-                    log.warn(sm.getString("coyoteRequest.uploadCreateFail", location.getAbsolutePath()));
-                }
-            }
-
-            if (!location.isDirectory()) {
-                parameters.setParseFailedReason(FailReason.MULTIPART_CONFIG_INVALID);
-                partsParseException = new IOException(sm.getString("coyoteRequest.uploadLocationInvalid", location));
-                return;
-            }
-
-
-            // Create a new file upload handler
-            DiskFileItemFactory factory = new DiskFileItemFactory();
-            try {
-                factory.setRepository(location.getCanonicalFile());
-            } catch (IOException ioe) {
-                parameters.setParseFailedReason(FailReason.IO_ERROR);
-                partsParseException = ioe;
-                return;
-            }
-            factory.setSizeThreshold(mce.getFileSizeThreshold());
-
-            FileUpload upload = new FileUpload();
-            upload.setFileItemFactory(factory);
-            upload.setFileSizeMax(mce.getMaxFileSize());
-            upload.setSizeMax(mce.getMaxRequestSize());
-            if (maxParameterCount > -1) {
-                // There is a limit. The limit for parts needs to be reduced by
-                // the number of parameters we have already parsed.
-                // Must be under the limit else parsing parameters would have
-                // triggered an exception.
-                upload.setFileCountMax(maxParameterCount - parameters.size());
-            }
-
-            parts = new ArrayList<>();
-            try {
-                List<FileItem> items = upload.parseRequest(new ServletRequestContext(this));
-                int maxPostSize = getConnector().getMaxPostSize();
-                int postSize = 0;
-                Charset charset = getCharset();
-                for (FileItem item : items) {
-                    ApplicationPart part = new ApplicationPart(item, location);
-                    parts.add(part);
-                    if (part.getSubmittedFileName() == null) {
-                        String name = part.getName();
-                        if (maxPostSize >= 0) {
-                            // Have to calculate equivalent size. Not completely
-                            // accurate but close enough.
-                            postSize += name.getBytes(charset).length;
-                            // Equals sign
-                            postSize++;
-                            // Value length
-                            postSize += part.getSize();
-                            // Value separator
-                            postSize++;
-                            if (postSize > maxPostSize) {
-                                parameters.setParseFailedReason(FailReason.POST_TOO_LARGE);
-                                throw new IllegalStateException(sm.getString("coyoteRequest.maxPostSizeExceeded"));
-                            }
+            items = upload.parseRequest(new ServletRequestContext(this));
+            int maxPostSize = getConnector().getMaxPostSize();
+            long postSize = 0;
+            Charset charset = getCharset();
+            for (FileItem item : items) {
+                ApplicationPart part = new ApplicationPart(item, location);
+                if (part.getSubmittedFileName() == null) {
+                    String name = part.getName();
+                    if (maxPostSize >= 0) {
+                        // Have to calculate equivalent size. Not completely
+                        // accurate but close enough.
+                        // Name
+                        postSize = Math.addExact(postSize, name.getBytes(charset).length);
+                        // Equals sign
+                        postSize = Math.addExact(postSize, 1);
+                        // Value length
+                        postSize = Math.addExact(postSize, part.getSize());
+                        // Value separator
+                        postSize = Math.addExact(postSize, 1);
+                        if (postSize > maxPostSize) {
+                            throw new IllegalStateException(sm.getString("coyoteRequest.maxPostSizeExceeded"));
                         }
-                        String value = null;
+                    }
+                    String value = null;
+                    try {
+                        value = part.getString(charset.name());
+                    } catch (UnsupportedEncodingException uee) {
+                        // Not possible
+                    }
+                    parameters.addParameter(name, value);
+                } else {
+                    // Adjust the limit to account for a file part which is not added to the parameter map.
+                    maxParameterCount--;
+                }
+                parts.add(part);
+            }
+            success = true;
+        } catch (InvalidContentTypeException e) {
+            partsParseException = new ServletException(e);
+        } catch (SizeException | FileCountLimitExceededException e) {
+            checkSwallowInput();
+            partsParseException = new InvalidParameterException(e, HttpServletResponse.SC_REQUEST_ENTITY_TOO_LARGE);
+        } catch (IOException ioe) {
+            partsParseException = ioe;
+        } catch (IllegalStateException e) {
+            checkSwallowInput();
+            partsParseException = e;
+        } finally {
+            /*
+             * GC will delete any temporary copies of uploaded files left in the work directory but if we know that the
+             * upload has failed then explicitly clean up now.
+             */
+            if (!success) {
+                parts.clear();
+                if (items != null) {
+                    for (FileItem item : items) {
                         try {
-                            value = part.getString(charset.name());
-                        } catch (UnsupportedEncodingException uee) {
-                            // Not possible
+                            item.delete();
+                        } catch (Throwable t) {
+                            ExceptionUtils.handleThrowable(t);
+                            log.warn(sm.getString("request.partCleanup.failed"), t);
                         }
-                        parameters.addParameter(name, value);
                     }
                 }
-
-                success = true;
-            } catch (InvalidContentTypeException e) {
-                parameters.setParseFailedReason(FailReason.INVALID_CONTENT_TYPE);
-                partsParseException = new ServletException(e);
-            } catch (SizeException e) {
-                parameters.setParseFailedReason(FailReason.POST_TOO_LARGE);
-                checkSwallowInput();
-                partsParseException = new IllegalStateException(e);
-            } catch (IOException e) {
-                parameters.setParseFailedReason(FailReason.IO_ERROR);
-                partsParseException = new IOException(e);
-            } catch (IllegalStateException e) {
-                // addParameters() will set parseFailedReason
-                checkSwallowInput();
-                partsParseException = e;
-            }
-        } finally {
-            // This might look odd but is correct. setParseFailedReason() only
-            // sets the failure reason if none is currently set. This code could
-            // be more efficient but it is written this way to be robust with
-            // respect to changes in the remainder of the method.
-            if (partsParseException != null || !success) {
-                parameters.setParseFailedReason(FailReason.UNKNOWN);
             }
         }
     }
 
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
     public Part getPart(String name) throws IOException, IllegalStateException, ServletException {
         for (Part part : getParts()) {
@@ -2847,11 +2571,11 @@ public class Request implements HttpServletRequest {
         if (requestedSessionId != null) {
             try {
                 session = manager.findSession(requestedSessionId);
-            } catch (IOException e) {
+            } catch (IOException ioe) {
                 if (log.isDebugEnabled()) {
-                    log.debug(sm.getString("request.session.failed", requestedSessionId, e.getMessage()), e);
+                    log.debug(sm.getString("request.session.failed", requestedSessionId, ioe.getMessage()), ioe);
                 } else {
-                    log.info(sm.getString("request.session.failed", requestedSessionId, e.getMessage()));
+                    log.info(sm.getString("request.session.failed", requestedSessionId, ioe.getMessage()));
                 }
                 session = null;
             }
@@ -2860,6 +2584,8 @@ public class Request implements HttpServletRequest {
             }
             if (session != null) {
                 session.access();
+                // The client has chosen to join the session
+                session.setNew(false);
                 return session;
             }
         }
@@ -2868,8 +2594,8 @@ public class Request implements HttpServletRequest {
         if (!create) {
             return null;
         }
-        boolean trackModesIncludesCookie = context.getServletContext().getEffectiveSessionTrackingModes()
-                .contains(SessionTrackingMode.COOKIE);
+        boolean trackModesIncludesCookie =
+                context.getServletContext().getEffectiveSessionTrackingModes().contains(SessionTrackingMode.COOKIE);
         if (trackModesIncludesCookie && response.getResponse().isCommitted()) {
             throw new IllegalStateException(sm.getString("coyoteRequest.sessionCreateCommitted"));
         }
@@ -2883,7 +2609,7 @@ public class Request implements HttpServletRequest {
         } else if (("/".equals(context.getSessionCookiePath()) && isRequestedSessionIdFromCookie())) {
             /*
              * This is the common(ish) use case: using the same session ID with multiple web applications on the same
-             * host. Typically this is used by Portlet implementations. It only works if sessions are tracked via
+             * host. Typically, this is used by Portlet implementations. It only works if sessions are tracked via
              * cookies. The cookie must have a path of "/" else it won't be provided for requests to all web
              * applications.
              *
@@ -2900,9 +2626,8 @@ public class Request implements HttpServletRequest {
                                 found = true;
                                 break;
                             }
-                        } catch (IOException e) {
-                            // Ignore. Problems with this manager will be
-                            // handled elsewhere.
+                        } catch (IOException ignore) {
+                            // Error looking up session. Treat it as not found.
                         }
                     }
                 }
@@ -2917,8 +2642,8 @@ public class Request implements HttpServletRequest {
 
         // Creating a new session cookie based on that session
         if (session != null && trackModesIncludesCookie) {
-            Cookie cookie = ApplicationSessionCookieConfig.createSessionCookie(context, session.getIdInternal(),
-                    isSecure());
+            Cookie cookie =
+                    ApplicationSessionCookieConfig.createSessionCookie(context, session.getIdInternal(), isSecure());
 
             response.addSessionCookieInternal(cookie);
         }
@@ -2959,7 +2684,7 @@ public class Request implements HttpServletRequest {
         if (context == null) {
             // No context. Possible call from Valve before a Host level
             // context rewrite when no ROOT content is configured. Use the
-            // default CookiePreocessor.
+            // default CookieProcessor.
             return new Rfc6265CookieProcessor();
         } else {
             return context.getCookieProcessor();
@@ -3012,7 +2737,7 @@ public class Request implements HttpServletRequest {
                 scookie.getValue().getByteChunk().setCharset(getCookieProcessor().getCharset());
                 cookie.setValue(unescape(scookie.getValue().toString()));
                 cookies[idx++] = cookie;
-            } catch (IllegalArgumentException e) {
+            } catch (IllegalArgumentException ignore) {
                 // Ignore bad cookie
             }
         }
@@ -3028,155 +2753,174 @@ public class Request implements HttpServletRequest {
      * Parse request parameters.
      */
     protected void parseParameters() {
+        doParseParameters();
 
+        if (parametersParseException != null) {
+            Context context = getContext();
+            if (context != null && context.getLogger().isDebugEnabled()) {
+                context.getLogger().debug(
+                        sm.getString("coyoteRequest.parametersParseException", parametersParseException.getMessage()));
+            }
+            throw parametersParseException;
+        }
+    }
+
+
+    protected void doParseParameters() {
+        if (parametersParsed) {
+            return;
+        }
         parametersParsed = true;
 
+        /*
+         * When the request body is multipart/form-data, both the parts and the query string count towards
+         * maxParameterCount. If parseParts() is called before getParameterXXX() then the parts will be parsed before
+         * the query string. Otherwise, the query string will be parsed first.
+         *
+         * maxParameterCount must be respected regardless of which is parsed first.
+         *
+         * maxParameterCount is reset from the Connector at the start of every request.
+         *
+         * If parts are parsed first, non-file parts will be added to the parameter map and any files will reduce
+         * maxParameterCount by 1 so that when the query string is parsed the difference between the size of the
+         * parameter map and maxParameterCount will be the original maxParameterCount less the number of parts. i.e. the
+         * maxParameterCount applied to the query string will be the original maxParameterCount less the number of
+         * parts.
+         *
+         * If the query string is parsed first, all parameters will be added to the parameter map and, ignoring
+         * maxPartCount, the part limit will be set to the original maxParameterCount less the size of the parameter
+         * map. i.e. the maxParameterCount applied to the parts will be the original maxParameterCount less the number
+         * of query parameters.
+         */
         Parameters parameters = coyoteRequest.getParameters();
-        boolean success = false;
-        try {
-            // Set this every time in case limit has been changed via JMX
-            parameters.setLimit(getConnector().getMaxParameterCount());
+        parameters.setLimit(maxParameterCount);
 
-            // getCharacterEncoding() may have been overridden to search for
-            // hidden form field containing request encoding
-            Charset charset = getCharset();
+        // getCharacterEncoding() may have been overridden to search for
+        // hidden form field containing request encoding
+        Charset charset = getCharset();
 
-            boolean useBodyEncodingForURI = connector.getUseBodyEncodingForURI();
-            parameters.setCharset(charset);
-            if (useBodyEncodingForURI) {
-                parameters.setQueryStringCharset(charset);
-            }
-            // Note: If !useBodyEncodingForURI, the query string encoding is
-            // that set towards the start of CoyoyeAdapter.service()
+        boolean useBodyEncodingForURI = connector.getUseBodyEncodingForURI();
+        parameters.setCharset(charset);
+        if (useBodyEncodingForURI) {
+            parameters.setQueryStringCharset(charset);
+        }
+        // Note: If !useBodyEncodingForURI, the query string encoding is
+        // that set towards the start of CoyoteAdapter.service()
 
-            parameters.handleQueryParameters();
+        parameters.handleQueryParameters();
 
-            if (usingInputStream || usingReader) {
-                success = true;
-                return;
-            }
-
-            String contentType = getContentType();
-            if (contentType == null) {
-                contentType = "";
-            }
-            int semicolon = contentType.indexOf(';');
-            if (semicolon >= 0) {
-                contentType = contentType.substring(0, semicolon).trim();
-            } else {
-                contentType = contentType.trim();
-            }
-
-            if ("multipart/form-data".equals(contentType)) {
-                parseParts(false);
-                success = true;
-                return;
-            }
-
-            if (!getConnector().isParseBodyMethod(getMethod())) {
-                success = true;
-                return;
-            }
-
-            if (!("application/x-www-form-urlencoded".equals(contentType))) {
-                success = true;
-                return;
-            }
-
-            int len = getContentLength();
-
-            if (len > 0) {
-                int maxPostSize = connector.getMaxPostSize();
-                if ((maxPostSize >= 0) && (len > maxPostSize)) {
-                    Context context = getContext();
-                    if (context != null && context.getLogger().isDebugEnabled()) {
-                        context.getLogger().debug(sm.getString("coyoteRequest.postTooLarge"));
-                    }
-                    checkSwallowInput();
-                    parameters.setParseFailedReason(FailReason.POST_TOO_LARGE);
-                    return;
-                }
-                byte[] formData = null;
-                if (len < CACHED_POST_LEN) {
-                    if (postData == null) {
-                        postData = new byte[CACHED_POST_LEN];
-                    }
-                    formData = postData;
-                } else {
-                    formData = new byte[len];
-                }
-                try {
-                    if (readPostBody(formData, len) != len) {
-                        parameters.setParseFailedReason(FailReason.REQUEST_BODY_INCOMPLETE);
-                        return;
-                    }
-                } catch (IOException e) {
-                    // Client disconnect
-                    Context context = getContext();
-                    if (context != null && context.getLogger().isDebugEnabled()) {
-                        context.getLogger().debug(sm.getString("coyoteRequest.parseParameters"), e);
-                    }
-                    parameters.setParseFailedReason(FailReason.CLIENT_DISCONNECT);
-                    return;
-                }
-                parameters.processParameters(formData, 0, len);
-            } else if ("chunked".equalsIgnoreCase(coyoteRequest.getHeader("transfer-encoding"))) {
-                byte[] formData = null;
-                try {
-                    formData = readChunkedPostBody();
-                } catch (IllegalStateException ise) {
-                    // chunkedPostTooLarge error
-                    parameters.setParseFailedReason(FailReason.POST_TOO_LARGE);
-                    Context context = getContext();
-                    if (context != null && context.getLogger().isDebugEnabled()) {
-                        context.getLogger().debug(sm.getString("coyoteRequest.parseParameters"), ise);
-                    }
-                    return;
-                } catch (IOException e) {
-                    // Client disconnect
-                    parameters.setParseFailedReason(FailReason.CLIENT_DISCONNECT);
-                    Context context = getContext();
-                    if (context != null && context.getLogger().isDebugEnabled()) {
-                        context.getLogger().debug(sm.getString("coyoteRequest.parseParameters"), e);
-                    }
-                    return;
-                }
-                if (formData != null) {
-                    parameters.processParameters(formData, 0, formData.length);
-                }
-            }
-            success = true;
-        } finally {
-            if (!success) {
-                parameters.setParseFailedReason(FailReason.UNKNOWN);
-            }
+        if (usingInputStream || usingReader) {
+            return;
         }
 
+        String mediaType = MediaType.parseMediaTypeOnly(getContentType());
+
+        if ("multipart/form-data".equals(mediaType)) {
+            parseParts(false);
+            if (partsParseException instanceof IllegalStateException) {
+                parametersParseException = (IllegalStateException) partsParseException;
+            } else if (partsParseException != null) {
+                parametersParseException = new InvalidParameterException(partsParseException);
+            }
+            return;
+        }
+
+        if (!getConnector().isParseBodyMethod(getMethod())) {
+            return;
+        }
+
+        if (!(Globals.CONTENT_TYPE_FORM_URL_ENCODING.equals(mediaType))) {
+            return;
+        }
+
+        int len = getContentLength();
+
+        if (len > 0) {
+            int maxPostSize = connector.getMaxPostSize();
+            if ((maxPostSize >= 0) && (len > maxPostSize)) {
+                String message = sm.getString("coyoteRequest.postTooLarge");
+                Context context = getContext();
+                if (context != null && context.getLogger().isDebugEnabled()) {
+                    context.getLogger().debug(message);
+                }
+                checkSwallowInput();
+                parametersParseException =
+                        new InvalidParameterException(message, HttpServletResponse.SC_REQUEST_ENTITY_TOO_LARGE);
+                return;
+            }
+            byte[] formData;
+            if (len < CACHED_POST_LEN) {
+                if (postData == null) {
+                    postData = new byte[CACHED_POST_LEN];
+                }
+                formData = postData;
+            } else {
+                formData = new byte[len];
+            }
+            try {
+                readPostBodyFully(formData, len);
+            } catch (IOException ioe) {
+                Context context = getContext();
+                if (context != null && context.getLogger().isDebugEnabled()) {
+                    context.getLogger().debug(sm.getString("coyoteRequest.parseParameters"), ioe);
+                }
+                if (ioe instanceof ClientAbortException) {
+                    // Client has disconnected. Close immediately.
+                    response.getCoyoteResponse().action(ActionCode.CLOSE_NOW, null);
+                }
+                if (ioe instanceof BadRequestException) {
+                    parametersParseException = new InvalidParameterException(ioe);
+                } else {
+                    parametersParseException = new InvalidParameterException(new BadRequestException(ioe));
+                }
+                return;
+            }
+            parameters.processParameters(formData, 0, len);
+        } else if ("chunked".equalsIgnoreCase(coyoteRequest.getHeader("transfer-encoding"))) {
+            byte[] formData = null;
+            try {
+                formData = readChunkedPostBody();
+            } catch (IllegalStateException ise) {
+                parametersParseException = ise;
+            } catch (IOException ioe) {
+                Context context = getContext();
+                if (context != null && context.getLogger().isDebugEnabled()) {
+                    context.getLogger().debug(sm.getString("coyoteRequest.parseParameters"), ioe);
+                }
+                if (ioe instanceof ClientAbortException) {
+                    // Client has disconnected. Close immediately.
+                    response.getCoyoteResponse().action(ActionCode.CLOSE_NOW, null);
+                }
+                if (ioe instanceof BadRequestException) {
+                    parametersParseException = new InvalidParameterException(ioe);
+                } else {
+                    parametersParseException = new InvalidParameterException(new BadRequestException(ioe));
+                }
+            }
+            if (formData != null) {
+                parameters.processParameters(formData, 0, formData.length);
+            }
+        }
     }
 
 
     /**
-     * Read post body in an array.
+     * Read post body into an array.
      *
      * @param body The bytes array in which the body will be read
      * @param len  The body length
      *
-     * @return the bytes count that has been read
-     *
-     * @throws IOException if an IO exception occurred
+     * @throws IOException if an IO exception occurred or EOF is reached before the body has been fully read
      */
-    protected int readPostBody(byte[] body, int len) throws IOException {
-
+    protected void readPostBodyFully(byte[] body, int len) throws IOException {
         int offset = 0;
         do {
             int inputLen = getStream().read(body, offset, len - offset);
             if (inputLen <= 0) {
-                return offset;
+                throw new EOFException();
             }
             offset += inputLen;
         } while ((len - offset) > 0);
-        return len;
-
     }
 
 
@@ -3198,7 +2942,8 @@ public class Request implements HttpServletRequest {
             if (connector.getMaxPostSize() >= 0 && (body.getLength() + len) > connector.getMaxPostSize()) {
                 // Too much data
                 checkSwallowInput();
-                throw new IllegalStateException(sm.getString("coyoteRequest.chunkedPostTooLarge"));
+                throw new InvalidParameterException(sm.getString("coyoteRequest.chunkedPostTooLarge"),
+                        HttpServletResponse.SC_REQUEST_ENTITY_TOO_LARGE);
             }
             if (len > 0) {
                 body.append(buffer, 0, len);
@@ -3229,7 +2974,7 @@ public class Request implements HttpServletRequest {
         // a local collection, sorted by the quality value (so we can
         // add Locales in descending order). The values will be ArrayLists
         // containing the corresponding Locales to be added
-        TreeMap<Double, ArrayList<Locale>> locales = new TreeMap<>();
+        TreeMap<Double,ArrayList<Locale>> locales = new TreeMap<>();
 
         Enumeration<String> values = getHeaders("accept-language");
 
@@ -3254,12 +2999,12 @@ public class Request implements HttpServletRequest {
      * @param value   the header value
      * @param locales the map that will hold the result
      */
-    protected void parseLocalesHeader(String value, TreeMap<Double, ArrayList<Locale>> locales) {
+    protected void parseLocalesHeader(String value, TreeMap<Double,ArrayList<Locale>> locales) {
 
         List<AcceptLanguage> acceptLanguages;
         try {
             acceptLanguages = AcceptLanguage.parse(new StringReader(value));
-        } catch (IOException e) {
+        } catch (IOException ioe) {
             // Mal-formed headers are ignore. Do the same in the unlikely event
             // of an IOException.
             return;
@@ -3284,14 +3029,14 @@ public class Request implements HttpServletRequest {
         // void remove(Request request, String name);
     }
 
-    private static final Map<String, SpecialAttributeAdapter> specialAttributes = new HashMap<>();
+    private static final Map<String,SpecialAttributeAdapter> specialAttributes = new HashMap<>();
 
     static {
         specialAttributes.put(Globals.DISPATCHER_TYPE_ATTR, new SpecialAttributeAdapter() {
             @Override
             public Object get(Request request, String name) {
-                return (request.internalDispatcherType == null) ? DispatcherType.REQUEST
-                        : request.internalDispatcherType;
+                return (request.internalDispatcherType == null) ? DispatcherType.REQUEST :
+                        request.internalDispatcherType;
             }
 
             @Override
@@ -3302,8 +3047,8 @@ public class Request implements HttpServletRequest {
         specialAttributes.put(Globals.DISPATCHER_REQUEST_PATH_ATTR, new SpecialAttributeAdapter() {
             @Override
             public Object get(Request request, String name) {
-                return (request.requestDispatcherPath == null) ? request.getRequestPathMB().toString()
-                        : request.requestDispatcherPath.toString();
+                return (request.requestDispatcherPath == null) ? request.getRequestPathMB().toString() :
+                        request.requestDispatcherPath.toString();
             }
 
             @Override
@@ -3331,31 +3076,6 @@ public class Request implements HttpServletRequest {
                     return ((TomcatPrincipal) request.userPrincipal).getGssCredential();
                 }
                 return null;
-            }
-
-            @Override
-            public void set(Request request, String name, Object value) {
-                // NO-OP
-            }
-        });
-        specialAttributes.put(Globals.PARAMETER_PARSE_FAILED_ATTR, new SpecialAttributeAdapter() {
-            @Override
-            public Object get(Request request, String name) {
-                if (request.getCoyoteRequest().getParameters().isParseFailed()) {
-                    return Boolean.TRUE;
-                }
-                return null;
-            }
-
-            @Override
-            public void set(Request request, String name, Object value) {
-                // NO-OP
-            }
-        });
-        specialAttributes.put(Globals.PARAMETER_PARSE_FAILED_REASON_ATTR, new SpecialAttributeAdapter() {
-            @Override
-            public Object get(Request request, String name) {
-                return request.getCoyoteRequest().getParameters().getParseFailedReason();
             }
 
             @Override
