@@ -28,14 +28,14 @@ import org.apache.juli.logging.LogFactory;
 public abstract class PooledSender extends AbstractSender implements MultiPointSender {
 
     private static final Log log = LogFactory.getLog(PooledSender.class);
-    protected static final StringManager sm =
-        StringManager.getManager(Constants.Package);
+    protected static final StringManager sm = StringManager.getManager(Constants.Package);
 
     private final SenderQueue queue;
     private int poolSize = 25;
     private long maxWait = 3000;
+
     public PooledSender() {
-        queue = new SenderQueue(this,poolSize);
+        queue = new SenderQueue(this, poolSize);
     }
 
     public abstract DataSender getNewDataSender();
@@ -51,7 +51,7 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
 
     @Override
     public synchronized void connect() throws IOException {
-        //do nothing, happens in the socket sender itself
+        // do nothing, happens in the socket sender itself
         queue.open();
         setConnected(true);
     }
@@ -91,8 +91,8 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
 
     @Override
     public boolean keepalive() {
-        //do nothing, the pool checks on every return
-        return (queue==null)?false:queue.checkIdleKeepAlive();
+        // do nothing, the pool checks on every return
+        return queue != null && queue.checkIdleKeepAlive();
     }
 
     @Override
@@ -102,21 +102,21 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
 
     @Override
     public void remove(Member member) {
-        //no op for now, should not cancel out any keys
-        //can create serious sync issues
-        //all TCP connections are cleared out through keepalive
-        //and if remote node disappears
+        // no op for now, should not cancel out any keys
+        // can create serious sync issues
+        // all TCP connections are cleared out through keepalive
+        // and if remote node disappears
     }
-    //  ----------------------------------------------------- Inner Class
+    // ----------------------------------------------------- Inner Class
 
     private static class SenderQueue {
-        private int limit = 25;
+        private int limit;
 
-        PooledSender parent = null;
+        PooledSender parent;
 
-        private List<DataSender> notinuse = null;
+        private final List<DataSender> notinuse;
 
-        private List<DataSender> inuse = null;
+        private final List<DataSender> inuse;
 
         private boolean isOpen = true;
 
@@ -133,6 +133,7 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
         public int getLimit() {
             return limit;
         }
+
         /**
          * @param limit The limit to set.
          */
@@ -140,11 +141,11 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
             this.limit = limit;
         }
 
-        public int getInUsePoolSize() {
+        public synchronized int getInUsePoolSize() {
             return inuse.size();
         }
 
-        public int getInPoolSize() {
+        public synchronized int getInPoolSize() {
             return notinuse.size();
         }
 
@@ -159,48 +160,49 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
 
         public synchronized DataSender getSender(long timeout) {
             long start = System.currentTimeMillis();
-            while ( true ) {
+            while (true) {
                 if (!isOpen) {
                     throw new IllegalStateException(sm.getString("pooledSender.closed.queue"));
                 }
                 DataSender sender = null;
-                if (notinuse.size() == 0 && inuse.size() < limit) {
+                if (notinuse.isEmpty() && inuse.size() < limit) {
                     sender = parent.getNewDataSender();
-                } else if (notinuse.size() > 0) {
-                    sender = notinuse.remove(0);
+                } else if (!notinuse.isEmpty()) {
+                    sender = notinuse.removeFirst();
                 }
                 if (sender != null) {
                     inuse.add(sender);
                     return sender;
-                }//end if
+                }
                 long delta = System.currentTimeMillis() - start;
-                if ( delta > timeout && timeout>0) {
+                if (delta > timeout && timeout > 0) {
                     return null;
                 } else {
                     try {
-                        wait(Math.max(timeout - delta,1));
-                    }catch (InterruptedException x){}
-                }//end if
+                        wait(Math.max(timeout - delta, 1));
+                    } catch (InterruptedException x) {
+                        // Ignore
+                    }
+                }
             }
         }
 
         public synchronized void returnSender(DataSender sender) {
-            if ( !isOpen) {
+            if (!isOpen) {
                 sender.disconnect();
                 return;
             }
-            //to do
+            // to do
             inuse.remove(sender);
-            //just in case the limit has changed
-            if ( notinuse.size() < this.getLimit() ) {
+            // just in case the limit has changed
+            if (notinuse.size() < this.getLimit()) {
                 notinuse.add(sender);
             } else {
                 try {
                     sender.disconnect();
                 } catch (Exception e) {
                     if (log.isDebugEnabled()) {
-                        log.debug(sm.getString(
-                                "PooledSender.senderDisconnectFail"), e);
+                        log.debug(sm.getString("PooledSender.senderDisconnectFail"), e);
                     }
                 }
             }
@@ -214,11 +216,11 @@ public abstract class PooledSender extends AbstractSender implements MultiPointS
             for (Object value : unused) {
                 DataSender sender = (DataSender) value;
                 sender.disconnect();
-            }//for
+            }
             for (Object o : used) {
                 DataSender sender = (DataSender) o;
                 sender.disconnect();
-            }//for
+            }
             notinuse.clear();
             inuse.clear();
             notifyAll();
