@@ -16,22 +16,23 @@
  */
 package org.apache.tomcat.util;
 
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 /**
- * Wraps a list of throwables as a single throwable. This is intended to be used
- * when multiple actions are taken where each may throw an exception but all
- * actions are taken before any errors are reported.
+ * Wraps a list of throwables as a single throwable. This is intended to be used when multiple actions are taken where
+ * each may throw an exception but all actions are taken before any errors are reported.
  * <p>
  * This class is <b>NOT</b> threadsafe.
  */
 public class MultiThrowable extends Throwable {
 
+    @Serial
     private static final long serialVersionUID = 1L;
 
-    private List<Throwable> throwables = new ArrayList<>();
+    private final List<Throwable> throwables = new ArrayList<>();
 
     /**
      * Add a throwable to the list of wrapped throwables.
@@ -52,15 +53,14 @@ public class MultiThrowable extends Throwable {
 
 
     /**
-     * @return {@code null} if there are no wrapped throwables, the Throwable if
-     *         there is a single wrapped throwable or the current instance of
-     *         there are multiple wrapped throwables
+     * @return {@code null} if there are no wrapped throwables, the Throwable if there is a single wrapped throwable or
+     *             the current instance of there are multiple wrapped throwables
      */
     public Throwable getThrowable() {
         if (size() == 0) {
             return null;
         } else if (size() == 1) {
-            return throwables.get(0);
+            return throwables.getFirst();
         } else {
             return this;
         }
@@ -76,10 +76,9 @@ public class MultiThrowable extends Throwable {
 
 
     /**
-     * Overrides the default implementation to provide a concatenation of the
-     * messages associated with each of the wrapped throwables. Note that the
-     * format of the returned String is not guaranteed to be fixed and may
-     * change in a future release.
+     * Overrides the default implementation to provide a concatenation of the messages associated with each of the
+     * wrapped throwables. Note that the format of the returned String is not guaranteed to be fixed and may change in a
+     * future release.
      */
     @Override
     public String toString() {
