@@ -23,6 +23,7 @@ import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
@@ -42,12 +43,11 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
 import org.junit.Assert;
-import org.junit.Ignore;
 import org.junit.Test;
 
 import org.apache.catalina.Context;
+import org.apache.catalina.Globals;
 import org.apache.catalina.authenticator.BasicAuthenticator;
-import org.apache.catalina.filters.FailedRequestFilter;
 import org.apache.catalina.startup.SimpleHttpClient;
 import org.apache.catalina.startup.TesterMapRealm;
 import org.apache.catalina.startup.Tomcat;
@@ -55,9 +55,9 @@ import org.apache.catalina.startup.TomcatBaseTest;
 import org.apache.tomcat.unittest.TesterRequest;
 import org.apache.tomcat.util.buf.ByteChunk;
 import org.apache.tomcat.util.buf.EncodedSolidusHandling;
-import org.apache.tomcat.util.descriptor.web.FilterDef;
-import org.apache.tomcat.util.descriptor.web.FilterMap;
+import org.apache.tomcat.util.buf.StringUtils;
 import org.apache.tomcat.util.descriptor.web.LoginConfig;
+import org.apache.tomcat.util.http.Method;
 
 /**
  * Test case for {@link Request}.
@@ -65,14 +65,12 @@ import org.apache.tomcat.util.descriptor.web.LoginConfig;
 public class TestRequest extends TomcatBaseTest {
 
     /**
-     * Test case for https://bz.apache.org/bugzilla/show_bug.cgi?id=37794
-     * POST parameters are not returned from a call to
-     * any of the {@link HttpServletRequest} getParameterXXX() methods if the
-     * request is chunked.
+     * Test case for https://bz.apache.org/bugzilla/show_bug.cgi?id=37794 POST parameters are not returned from a call
+     * to any of the {@link HttpServletRequest} getParameterXXX() methods if the request is chunked.
      */
     @Test
     public void testBug37794() {
-        Bug37794Client client = new Bug37794Client(true);
+        Bug37794Client client = new Bug37794Client();
 
         // Edge cases around zero
         client.doRequest(-1, false); // Unlimited
@@ -84,8 +82,6 @@ public class TestRequest extends TomcatBaseTest {
         client.reset();
         client.doRequest(1, false); // 1 byte - too small should fail
         Assert.assertTrue(client.isResponse413());
-
-        client.reset();
 
         // Edge cases around actual content length
         client.reset();
@@ -113,22 +109,6 @@ public class TestRequest extends TomcatBaseTest {
         Assert.assertTrue(client.isResponseBodyOK());
     }
 
-    /**
-     * Additional test for failed requests handling when no FailedRequestFilter
-     * is defined.
-     */
-    @Test
-    public void testBug37794withoutFilter() {
-        Bug37794Client client = new Bug37794Client(false);
-
-        // Edge cases around actual content length
-        client.reset();
-        client.doRequest(6, false); // Too small should fail
-        // Response code will be OK, but parameters list will be empty
-        Assert.assertTrue(client.isResponse200());
-        Assert.assertEquals("", client.getResponseBody());
-    }
-
     private static class Bug37794Servlet extends HttpServlet {
 
         private static final long serialVersionUID = 1L;
@@ -137,8 +117,7 @@ public class TestRequest extends TomcatBaseTest {
          * Only interested in the parameters and values for POST requests.
          */
         @Override
-        protected void doPost(HttpServletRequest req, HttpServletResponse resp)
-                throws ServletException, IOException {
+        protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
             // Just echo the parameters and values back as plain text
             resp.setContentType("text/plain");
 
@@ -158,35 +137,17 @@ public class TestRequest extends TomcatBaseTest {
      */
     private class Bug37794Client extends SimpleHttpClient {
 
-        private final boolean createFilter;
-
         private boolean init;
-
-        Bug37794Client(boolean createFilter) {
-            this.createFilter = createFilter;
-        }
 
         private synchronized void init() throws Exception {
             if (init) {
-              return;
+                return;
             }
 
             Tomcat tomcat = getTomcatInstance();
             Context root = tomcat.addContext("", TEMP_DIR);
             Tomcat.addServlet(root, "Bug37794", new Bug37794Servlet());
             root.addServletMappingDecoded("/test", "Bug37794");
-
-            if (createFilter) {
-                FilterDef failedRequestFilter = new FilterDef();
-                failedRequestFilter.setFilterName("failedRequestFilter");
-                failedRequestFilter.setFilterClass(
-                        FailedRequestFilter.class.getName());
-                FilterMap failedRequestFilterMap = new FilterMap();
-                failedRequestFilterMap.setFilterName("failedRequestFilter");
-                failedRequestFilterMap.addURLPatternDecoded("/*");
-                root.addFilterDef(failedRequestFilter);
-                root.addFilterMap(failedRequestFilterMap);
-            }
 
             tomcat.start();
 
@@ -208,31 +169,37 @@ public class TestRequest extends TomcatBaseTest {
                 // Send request in two parts
                 String[] request = new String[2];
                 if (ucChunkedHead) {
+                    // @formatter:off
                     request[0] =
-                        "POST http://localhost:8080/test HTTP/1.1" + CRLF +
-                        "Host: localhost:8080" + CRLF +
-                        "content-type: application/x-www-form-urlencoded" + CRLF +
-                        "Transfer-Encoding: CHUNKED" + CRLF +
-                        "Connection: close" + CRLF +
-                        CRLF +
-                        "3" + CRLF +
-                        "a=1" + CRLF;
+                            "POST http://localhost:8080/test HTTP/1.1" + CRLF +
+                            "Host: localhost:8080" + CRLF +
+                            SimpleHttpClient.HTTP_HEADER_CONTENT_TYPE_FORM_URL_ENCODING +
+                            "Transfer-Encoding: CHUNKED" + CRLF +
+                            "Connection: close" + CRLF +
+                            CRLF +
+                            "3" + CRLF +
+                            "a=1" + CRLF;
+                    // @formatter:on
                 } else {
+                    // @formatter:off
                     request[0] =
-                        "POST http://localhost:8080/test HTTP/1.1" + CRLF +
-                        "Host: localhost:8080" + CRLF +
-                        "content-type: application/x-www-form-urlencoded" + CRLF +
-                        "Transfer-Encoding: chunked" + CRLF +
-                        "Connection: close" + CRLF +
-                        CRLF +
-                        "3" + CRLF +
-                        "a=1" + CRLF;
+                            "POST http://localhost:8080/test HTTP/1.1" + CRLF +
+                            "Host: localhost:8080" + CRLF +
+                            SimpleHttpClient.HTTP_HEADER_CONTENT_TYPE_FORM_URL_ENCODING +
+                            "Transfer-Encoding: chunked" + CRLF +
+                            "Connection: close" + CRLF +
+                            CRLF +
+                            "3" + CRLF +
+                            "a=1" + CRLF;
+                    // @formatter:on
                 }
+                // @formatter:off
                 request[1] =
-                    "4" + CRLF +
-                    "&b=2" + CRLF +
-                    "0" + CRLF +
-                    CRLF;
+                        "4" + CRLF +
+                        "&b=2" + CRLF +
+                        "0" + CRLF +
+                        CRLF;
+                // @formatter:on
 
                 setRequest(request);
                 processRequest(); // blocks until response has been read
@@ -262,9 +229,7 @@ public class TestRequest extends TomcatBaseTest {
     }
 
     /*
-     * Test case for
-     * <a href="https://bz.apache.org/bugzilla/show_bug.cgi?id=38113">bug
-     * 38118</a>.
+     * Test case for <a href="https://bz.apache.org/bugzilla/show_bug.cgi?id=38113">bug 38118</a>.
      */
     @Test
     public void testBug38113() throws Exception {
@@ -272,7 +237,7 @@ public class TestRequest extends TomcatBaseTest {
         Tomcat tomcat = getTomcatInstance();
 
         // No file system docBase required
-        Context ctx = tomcat.addContext("", null);
+        Context ctx = getProgrammaticRootContext();
 
         // Add the Servlet
         Tomcat.addServlet(ctx, "servlet", new EchoQueryStringServlet());
@@ -298,8 +263,7 @@ public class TestRequest extends TomcatBaseTest {
         private static final long serialVersionUID = 1L;
 
         @Override
-        protected void doGet(HttpServletRequest req, HttpServletResponse resp)
-                throws ServletException, IOException {
+        protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
             resp.setContentType("text/plain");
             PrintWriter pw = resp.getWriter();
             pw.print("QueryString=" + req.getQueryString());
@@ -307,16 +271,15 @@ public class TestRequest extends TomcatBaseTest {
     }
 
     /*
-     * Test case for {@link Request#login(String, String)} and
-     * {@link Request#logout()}.
+     * Test case for {@link Request#login(String, String)} and {@link Request#logout()}.
      */
     @Test
-    public void testLoginLogout() throws Exception{
+    public void testLoginLogout() throws Exception {
         // Setup Tomcat instance
         Tomcat tomcat = getTomcatInstance();
 
         // No file system docBase required
-        Context ctx = tomcat.addContext("", null);
+        Context ctx = getProgrammaticRootContext();
 
         LoginConfig config = new LoginConfig();
         config.setAuthMethod("BASIC");
@@ -343,25 +306,24 @@ public class TestRequest extends TomcatBaseTest {
         private static final String OK = "OK";
 
         @Override
-        protected void doGet(HttpServletRequest req, HttpServletResponse resp)
-                throws ServletException, IOException {
+        protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
 
             req.login(USER, PWD);
 
             if (!req.getRemoteUser().equals(USER)) {
-              throw new ServletException();
+                throw new ServletException();
             }
             if (!req.getUserPrincipal().getName().equals(USER)) {
-              throw new ServletException();
+                throw new ServletException();
             }
 
             req.logout();
 
             if (req.getRemoteUser() != null) {
-              throw new ServletException();
+                throw new ServletException();
             }
             if (req.getUserPrincipal() != null) {
-              throw new ServletException();
+                throw new ServletException();
             }
 
             resp.getWriter().write(OK);
@@ -372,8 +334,7 @@ public class TestRequest extends TomcatBaseTest {
     @Test
     public void testBug49424NoChunking() throws Exception {
         Tomcat tomcat = getTomcatInstance();
-        Context root = tomcat.addContext("",
-                System.getProperty("java.io.tmpdir"));
+        Context root = tomcat.addContext("", System.getProperty("java.io.tmpdir"));
         Tomcat.addServlet(root, "Bug37794", new Bug37794Servlet());
         root.addServletMappingDecoded("/", "Bug37794");
         tomcat.start();
@@ -386,8 +347,7 @@ public class TestRequest extends TomcatBaseTest {
     @Test
     public void testBug49424WithChunking() throws Exception {
         Tomcat tomcat = getTomcatInstance();
-        Context root = tomcat.addContext("",
-                System.getProperty("java.io.tmpdir"));
+        Context root = tomcat.addContext("", System.getProperty("java.io.tmpdir"));
         Tomcat.addServlet(root, "Bug37794", new Bug37794Servlet());
         root.addServletMappingDecoded("/", "Bug37794");
         tomcat.start();
@@ -399,23 +359,18 @@ public class TestRequest extends TomcatBaseTest {
     }
 
     /**
-     * Test case for https://bz.apache.org/bugzilla/show_bug.cgi?id=48692
-     * PUT requests should be able to fetch request parameters coming from
-     * the request body (when properly configured using the new parseBodyMethod
-     * setting).
+     * Test case for https://bz.apache.org/bugzilla/show_bug.cgi?id=48692 PUT requests should be able to fetch request
+     * parameters coming from the request body (when properly configured using the new parseBodyMethod setting).
      */
     @Test
     public void testBug48692() {
         Bug48692Client client = new Bug48692Client();
 
         // Make sure GET works properly
-        client.doRequest("GET", "foo=bar", null, null, false);
+        client.doRequest(Method.GET, "foo=bar", null, null, false);
 
-        Assert.assertTrue("Non-200 response for GET request",
-                   client.isResponse200());
-        Assert.assertEquals("Incorrect response for GET request",
-                     "foo=bar",
-                     client.getResponseBody());
+        Assert.assertTrue("Non-200 response for GET request", client.isResponse200());
+        Assert.assertEquals("Incorrect response for GET request", "foo=bar", client.getResponseBody());
 
         client.reset();
 
@@ -423,72 +378,52 @@ public class TestRequest extends TomcatBaseTest {
         // Make sure POST works properly
         //
         // POST with separate GET and POST parameters
-        client.doRequest("POST", "foo=bar", "application/x-www-form-urlencoded", "bar=baz", true);
+        client.doRequest(Method.POST, "foo=bar", Globals.CONTENT_TYPE_FORM_URL_ENCODING, "bar=baz", true);
 
-        Assert.assertTrue("Non-200 response for POST request",
-                   client.isResponse200());
-        Assert.assertEquals("Incorrect response for POST request",
-                     "bar=baz,foo=bar",
-                     client.getResponseBody());
+        Assert.assertTrue("Non-200 response for POST request", client.isResponse200());
+        Assert.assertEquals("Incorrect response for POST request", "bar=baz,foo=bar", client.getResponseBody());
 
         client.reset();
 
         // POST with overlapping GET and POST parameters
-        client.doRequest("POST", "foo=bar&bar=foo", "application/x-www-form-urlencoded", "bar=baz&foo=baz", true);
+        client.doRequest(Method.POST, "foo=bar&bar=foo", Globals.CONTENT_TYPE_FORM_URL_ENCODING, "bar=baz&foo=baz", true);
 
-        Assert.assertTrue("Non-200 response for POST request",
-                   client.isResponse200());
-        Assert.assertEquals("Incorrect response for POST request",
-                     "bar=baz,bar=foo,foo=bar,foo=baz",
-                     client.getResponseBody());
+        Assert.assertTrue("Non-200 response for POST request", client.isResponse200());
+        Assert.assertEquals("Incorrect response for POST request", "bar=baz,bar=foo,foo=bar,foo=baz",
+                client.getResponseBody());
 
         client.reset();
 
         // PUT without POST-style parsing
-        client.doRequest("PUT", "foo=bar&bar=foo", "application/x-www-form-urlencoded", "bar=baz&foo=baz", false);
+        client.doRequest(Method.PUT, "foo=bar&bar=foo", Globals.CONTENT_TYPE_FORM_URL_ENCODING, "bar=baz&foo=baz", false);
 
-        Assert.assertTrue("Non-200 response for PUT/noparse request",
-                   client.isResponse200());
-        Assert.assertEquals("Incorrect response for PUT request",
-                     "bar=foo,foo=bar",
-                     client.getResponseBody());
+        Assert.assertTrue("Non-200 response for PUT/noparse request", client.isResponse200());
+        Assert.assertEquals("Incorrect response for PUT request", "bar=foo,foo=bar", client.getResponseBody());
 
         client.reset();
 
         // PUT with POST-style parsing
-        client.doRequest("PUT", "foo=bar&bar=foo", "application/x-www-form-urlencoded", "bar=baz&foo=baz", true);
+        client.doRequest(Method.PUT, "foo=bar&bar=foo", Globals.CONTENT_TYPE_FORM_URL_ENCODING, "bar=baz&foo=baz", true);
 
-        Assert.assertTrue("Non-200 response for PUT request",
-                   client.isResponse200());
-        Assert.assertEquals("Incorrect response for PUT/parse request",
-                     "bar=baz,bar=foo,foo=bar,foo=baz",
-                     client.getResponseBody());
+        Assert.assertTrue("Non-200 response for PUT request", client.isResponse200());
+        Assert.assertEquals("Incorrect response for PUT/parse request", "bar=baz,bar=foo,foo=bar,foo=baz",
+                client.getResponseBody());
 
         client.reset();
-
-        /*
-        private Exception doRequest(String method,
-                                    String queryString,
-                                    String contentType,
-                                    String requestBody,
-                                    boolean allowBody) {
-        */
     }
 
     @Test
     public void testBug54984() throws Exception {
         Tomcat tomcat = getTomcatInstance();
-        Context root = tomcat.addContext("",
-                System.getProperty("java.io.tmpdir"));
+        Context root = tomcat.addContext("", System.getProperty("java.io.tmpdir"));
         root.setAllowCasualMultipartParsing(true);
         Tomcat.addServlet(root, "Bug54984", new Bug54984Servlet());
         root.addServletMappingDecoded("/", "Bug54984");
         tomcat.start();
 
-        HttpURLConnection conn = getConnection("http://localhost:" + getPort()
-                + "/parseParametersBeforeParseParts");
+        HttpURLConnection conn = getConnection("http://localhost:" + getPort() + "/parseParametersBeforeParseParts");
 
-        prepareRequestBug54984(conn);
+        prepareMultiPartRequest(conn);
 
         checkResponseBug54984(conn);
 
@@ -496,7 +431,7 @@ public class TestRequest extends TomcatBaseTest {
 
         conn = getConnection("http://localhost:" + getPort() + "/");
 
-        prepareRequestBug54984(conn);
+        prepareMultiPartRequest(conn);
 
         checkResponseBug54984(conn);
 
@@ -511,33 +446,30 @@ public class TestRequest extends TomcatBaseTest {
         private static final long serialVersionUID = 1L;
 
         /**
-         * Only interested in the parameters and values for requests.
-         * Note: echos parameters in alphabetical order.
+         * Only interested in the parameters and values for requests. Note: echos parameters in alphabetical order.
          */
         @Override
-        protected void service(HttpServletRequest req, HttpServletResponse resp)
-            throws ServletException, IOException {
+        protected void service(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
             // Just echo the parameters and values back as plain text
             resp.setContentType("text/plain");
             resp.setCharacterEncoding("UTF-8");
 
             PrintWriter out = resp.getWriter();
 
-            TreeMap<String,String[]> parameters =
-                    new TreeMap<>(req.getParameterMap());
+            TreeMap<String,String[]> parameters = new TreeMap<>(req.getParameterMap());
 
             boolean first = true;
 
-            for(String name: parameters.keySet()) {
+            for (String name : parameters.keySet()) {
                 String[] values = req.getParameterValues(name);
 
-                java.util.Arrays.sort(values);
+                Arrays.sort(values);
 
                 for (String value : values) {
                     if (first) {
-                      first = false;
+                        first = false;
                     } else {
-                      out.print(",");
+                        out.print(",");
                     }
 
                     out.print(name + "=" + value);
@@ -555,7 +487,7 @@ public class TestRequest extends TomcatBaseTest {
 
         private synchronized void init() throws Exception {
             if (init) {
-              return;
+                return;
             }
 
             Tomcat tomcat = getTomcatInstance();
@@ -569,45 +501,39 @@ public class TestRequest extends TomcatBaseTest {
             init = true;
         }
 
-        private Exception doRequest(String method,
-                                    String queryString,
-                                    String contentType,
-                                    String requestBody,
-                                    boolean allowBody) {
+        private Exception doRequest(String method, String queryString, String contentType, String requestBody,
+                boolean allowBody) {
             Tomcat tomcat = getTomcatInstance();
 
             try {
                 init();
-                if(allowBody) {
-                  tomcat.getConnector().setParseBodyMethods(method);
-                }
-                else {
-                  tomcat.getConnector().setParseBodyMethods(""); // never parse
+                if (allowBody) {
+                    tomcat.getConnector().setParseBodyMethods(method);
+                } else {
+                    tomcat.getConnector().setParseBodyMethods(""); // never parse
                 }
 
                 // Open connection
                 connect();
 
                 // Re-encode the request body so that bytes = characters
-                if(null != requestBody) {
-                  requestBody = new String(requestBody.getBytes("UTF-8"), "ASCII");
+                if (null != requestBody) {
+                    requestBody = new String(requestBody.getBytes("UTF-8"), "ASCII");
                 }
 
                 // Send specified request body using method
+                // @formatter:off
                 String[] request = {
-                    (
-                     method + " http://localhost:" + getPort() + "/echo"
-                     + (null == queryString ? "" : ("?" + queryString))
-                     + " HTTP/1.1" + CRLF
-                     + "Host: localhost:" + getPort() + CRLF
-                     + (null == contentType ? ""
-                        : ("Content-Type: " + contentType + CRLF))
-                     + "Connection: close" + CRLF
-                     + (null == requestBody ? "" : "Content-Length: " + requestBody.length() + CRLF)
-                     + CRLF
-                     + (null == requestBody ? "" : requestBody)
-                     )
+                        method + " http://localhost:" + getPort() + "/echo" +
+                             (null == queryString ? "" : ("?" + queryString)) + " HTTP/1.1" + CRLF +
+                            "Host: localhost:" + getPort() + CRLF +
+                            (null == contentType ? "" : ("Content-Type: " + contentType + CRLF)) +
+                            "Connection: close" + CRLF +
+                            (null == requestBody ? "" : "Content-Length: " + requestBody.length() + CRLF) +
+                            CRLF +
+                            (null == requestBody ? "" : requestBody)
                 };
+                // @formatter:on
 
                 setRequest(request);
                 processRequest(); // blocks until response has been read
@@ -628,9 +554,9 @@ public class TestRequest extends TomcatBaseTest {
 
     private HttpURLConnection getConnection(String query) throws IOException {
         URL postURL;
-        postURL = new URL(query);
+        postURL = URI.create(query).toURL();
         HttpURLConnection conn = (HttpURLConnection) postURL.openConnection();
-        conn.setRequestMethod("POST");
+        conn.setRequestMethod(Method.POST);
 
         conn.setDoInput(true);
         conn.setDoOutput(true);
@@ -645,8 +571,7 @@ public class TestRequest extends TomcatBaseTest {
         private static final long serialVersionUID = 1L;
 
         @Override
-        protected void doPost(HttpServletRequest req, HttpServletResponse resp)
-                throws ServletException, IOException {
+        protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
             req.setCharacterEncoding("UTF-8");
 
             if (req.getRequestURI().endsWith("parseParametersBeforeParseParts")) {
@@ -662,11 +587,9 @@ public class TestRequest extends TomcatBaseTest {
         }
     }
 
-    private void prepareRequestBug54984(HttpURLConnection conn)
-            throws Exception {
+    private void prepareMultiPartRequest(HttpURLConnection conn) throws Exception {
         String boundary = "-----" + System.currentTimeMillis();
-        conn.setRequestProperty("Content-Type",
-                "multipart/form-data; boundary=" + boundary);
+        conn.setRequestProperty("Content-Type", "multipart/form-data; boundary=" + boundary);
 
         try (OutputStreamWriter osw = new OutputStreamWriter(conn.getOutputStream(), "UTF-8");
                 PrintWriter writer = new PrintWriter(osw, true)) {
@@ -684,8 +607,7 @@ public class TestRequest extends TomcatBaseTest {
         }
     }
 
-    private void checkResponseBug54984(HttpURLConnection conn)
-            throws Exception {
+    private void checkResponseBug54984(HttpURLConnection conn) throws Exception {
         List<String> response = new ArrayList<>();
         int status = conn.getResponseCode();
         if (status == HttpURLConnection.HTTP_OK) {
@@ -749,17 +671,17 @@ public class TestRequest extends TomcatBaseTest {
 
     @Test
     public void testBug56501j() throws Exception {
-        doBug56501("/pa_th/abc", "/pa%5Fth/abc", "/pa%5Fth/abc");
+        doBug56501("/pa_th/abc", "/pa%5Fth/abc", "/pa_th/abc");
     }
 
     @Test
     public void testBug56501k() throws Exception {
-        doBug56501("/pa_th/abc", "/pa%5Fth/abc/", "/pa%5Fth/abc");
+        doBug56501("/pa_th/abc", "/pa%5Fth/abc/", "/pa_th/abc");
     }
 
     @Test
     public void testBug56501l() throws Exception {
-        doBug56501("/pa_th/abc", "/pa%5Fth/abc/xxx", "/pa%5Fth/abc");
+        doBug56501("/pa_th/abc", "/pa%5Fth/abc/xxx", "/pa_th/abc");
     }
 
     @Test
@@ -779,12 +701,12 @@ public class TestRequest extends TomcatBaseTest {
 
     @Test
     public void testBug56501p() throws Exception {
-        doBug56501("/path/abc", "/path;a=b/abc/xxx", "/path;a=b/abc");
+        doBug56501("/path/abc", "/path;a=b/abc/xxx", "/path/abc");
     }
 
     @Test
     public void testBug56501q() throws Exception {
-        doBug56501("/path/abc", "/path/abc;a=b/xxx", "/path/abc;a=b");
+        doBug56501("/path/abc", "/path/abc;a=b/xxx", "/path/abc");
     }
 
     @Test
@@ -794,37 +716,37 @@ public class TestRequest extends TomcatBaseTest {
 
     @Test
     public void testBug56501s() throws Exception {
-        doBug56501("/path/abc", "/.;a=b/path/abc/xxx", "/.;a=b/path/abc");
+        doBug56501("/path/abc", "/.;a=b/path/abc/xxx", "/path/abc");
     }
 
     @Test
     public void testBug57215a() throws Exception {
-        doBug56501("/path", "//path", "//path");
+        doBug56501("/path", "//path", "/path");
     }
 
     @Test
     public void testBug57215b() throws Exception {
-        doBug56501("/path", "//path/", "//path");
+        doBug56501("/path", "//path/", "/path");
     }
 
     @Test
     public void testBug57215c() throws Exception {
-        doBug56501("/path", "/%2Fpath", "/%2Fpath", EncodedSolidusHandling.DECODE);
+        doBug56501("/path", "/%2Fpath", "/path", EncodedSolidusHandling.DECODE);
     }
 
     @Test
     public void testBug57215d() throws Exception {
-        doBug56501("/path", "/%2Fpath%2F", "/%2Fpath", EncodedSolidusHandling.DECODE);
+        doBug56501("/path", "/%2Fpath%2F", "/path", EncodedSolidusHandling.DECODE);
     }
 
     @Test
     public void testBug57215e() throws Exception {
-        doBug56501("/path", "/foo/../path", "/foo/../path");
+        doBug56501("/path", "/foo/../path", "/path");
     }
 
     @Test
     public void testBug57215f() throws Exception {
-        doBug56501("/path", "/foo/..%2fpath", "/foo/..%2fpath", EncodedSolidusHandling.DECODE);
+        doBug56501("/path", "/foo/..%2fpath", "/path", EncodedSolidusHandling.DECODE);
     }
 
     private void doBug56501(String deployPath, String requestPath, String expected) throws Exception {
@@ -862,8 +784,7 @@ public class TestRequest extends TomcatBaseTest {
         private static final long serialVersionUID = 1L;
 
         @Override
-        protected void doGet(HttpServletRequest req, HttpServletResponse resp)
-                throws ServletException, IOException {
+        protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
             resp.setContentType("text/plain");
             resp.getWriter().print(req.getContextPath());
         }
@@ -883,8 +804,7 @@ public class TestRequest extends TomcatBaseTest {
     }
 
     /*
-     * Reverse header order of getLocaleMultipleHeaders01() and make sure the
-     * result is the same.
+     * Reverse header order of getLocaleMultipleHeaders01() and make sure the result is the same.
      */
     @Test
     public void getLocaleMultipleHeaders02() throws Exception {
@@ -901,46 +821,24 @@ public class TestRequest extends TomcatBaseTest {
 
 
     @Test
-    @Ignore("Used to check performance of different parsing approaches")
-    public void localeParsePerformance() throws Exception {
-        TesterRequest req = new TesterRequest();
-        req.addHeader("accept-encoding", "en-gb,en");
-
-        long start = System.nanoTime();
-
-        // Takes about 0.3s on a quad core 2.7Ghz 2013 MacBook
-        for (int i = 0; i < 10000000; i++) {
-            req.parseLocales();
-            req.localesParsed = false;
-            req.locales.clear();
-        }
-
-        long time = System.nanoTime() - start;
-
-        System.out.println(time);
-    }
-
-
-    @Test
     public void testGetReaderValidEncoding() throws Exception {
         doTestGetReader("ISO-8859-1", true);
     }
 
 
     @Test
-    public void testGetReaderInvalidEbcoding() throws Exception {
+    public void testGetReaderInvalidEncoding() throws Exception {
         doTestGetReader("X-Invalid", false);
     }
 
 
-    private void doTestGetReader(String userAgentCharacterEncoding, boolean expect200)
-            throws Exception {
+    private void doTestGetReader(String userAgentCharacterEncoding, boolean expect200) throws Exception {
 
         // Setup Tomcat instance
         Tomcat tomcat = getTomcatInstance();
 
         // No file system docBase required
-        Context ctx = tomcat.addContext("", null);
+        Context ctx = getProgrammaticRootContext();
 
         Tomcat.addServlet(ctx, "servlet", new Bug61264GetReaderServlet());
         ctx.addServletMappingDecoded("/", "servlet");
@@ -957,7 +855,7 @@ public class TestRequest extends TomcatBaseTest {
         ByteChunk bc = new ByteChunk();
         Map<String,List<String>> reqHeaders = new HashMap<>();
         reqHeaders.put("Content-Type",
-                Arrays.asList(new String[] {"text/plain;charset=" + userAgentCharacterEncoding}));
+                Arrays.asList(new String[] { "text/plain;charset=" + userAgentCharacterEncoding }));
 
         int rc = postUrl(body, "http://localhost:" + getPort() + "/", bc, reqHeaders, null);
 
@@ -974,17 +872,154 @@ public class TestRequest extends TomcatBaseTest {
         private static final long serialVersionUID = 1L;
 
         @Override
-        protected void doGet(HttpServletRequest req, HttpServletResponse resp)
-                throws ServletException, IOException {
+        protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
             // This is intended for POST requests
             resp.sendError(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
         }
 
         @Override
-        protected void doPost(HttpServletRequest req, HttpServletResponse resp)
-                throws ServletException, IOException {
+        protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
             // Container will handle any errors
             req.getReader();
+        }
+    }
+
+
+    /*
+     * https://bz.apache.org/bugzilla/show_bug.cgi?id=69442
+     */
+    @Test
+    public void testTestParameterMediaTypeLowerCase() throws Exception {
+        // toLowerCase() is unnecessary but keep it in case the constant is changed in the future
+        doTestParameterMediaTypeCase(Globals.CONTENT_TYPE_FORM_URL_ENCODING.toLowerCase(Locale.ENGLISH));
+    }
+
+
+    /*
+     * https://bz.apache.org/bugzilla/show_bug.cgi?id=69442
+     */
+    @Test
+    public void testTestParameterMediaTypeUpperCase() throws Exception {
+        doTestParameterMediaTypeCase(Globals.CONTENT_TYPE_FORM_URL_ENCODING.toUpperCase(Locale.ENGLISH));
+    }
+
+
+    private void doTestParameterMediaTypeCase(String contentType) throws Exception {
+        // Setup Tomcat instance
+        Tomcat tomcat = getTomcatInstance();
+
+        // No file system docBase required
+        Context ctx = getProgrammaticRootContext();
+
+        Tomcat.addServlet(ctx, "servlet", new Bug69442Servlet());
+        ctx.addServletMappingDecoded("/", "servlet");
+
+        tomcat.start();
+
+        ByteChunk bc = new ByteChunk();
+        Map<String,List<String>> reqHeaders = new HashMap<>();
+        reqHeaders.put("Content-Type", Arrays.asList(contentType));
+        postUrl("a=b&c=d".getBytes(), "http://localhost:" + getPort() + "/", bc, reqHeaders, null);
+        String responseBody = bc.toString();
+        Assert.assertTrue(responseBody, responseBody.contains("a=b"));
+        Assert.assertTrue(responseBody, responseBody.contains("c=d"));
+    }
+
+
+    private static class Bug69442Servlet extends HttpServlet {
+
+        private static final long serialVersionUID = 1L;
+
+        @Override
+        protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+            resp.setContentType("text/plain");
+            resp.setCharacterEncoding(StandardCharsets.UTF_8);
+            PrintWriter pw = resp.getWriter();
+            Enumeration<String> names = req.getParameterNames();
+            while (names.hasMoreElements()) {
+                String name = names.nextElement();
+                String[] values = req.getParameterValues(name);
+                pw.println(name + "=" + StringUtils.join(values));
+            }
+        }
+    }
+
+
+    /*
+     * getParameter should work with a multipart/form-data request if there is no multipart config.
+     */
+    @Test
+    public void testBug69690a() throws Exception {
+        Tomcat tomcat = getTomcatInstance();
+        Context ctx = getProgrammaticRootContext();
+        Tomcat.addServlet(ctx, "Bug69690", new Bug69690Servlet());
+        ctx.addServletMappingDecoded("/", "Bug69690");
+        tomcat.start();
+
+        HttpURLConnection conn = getConnection("http://localhost:" + getPort() + "/parameter?a=b");
+
+        prepareMultiPartRequest(conn);
+
+        List<String> response = new ArrayList<>();
+        int status = conn.getResponseCode();
+        if (status == HttpURLConnection.HTTP_OK) {
+            try (InputStreamReader isr = new InputStreamReader(conn.getInputStream(), "UTF-8");
+                    BufferedReader reader = new BufferedReader(isr)) {
+                String line = null;
+                while ((line = reader.readLine()) != null) {
+                    response.add(line);
+                }
+                Assert.assertTrue(response.contains("OK"));
+            }
+        } else {
+            Assert.fail("OK status was expected: " + status);
+        }
+
+        conn.disconnect();
+    }
+
+
+    /*
+     * getPart should not work with a multipart/form-data request if there is no multipart config.
+     */
+    @Test
+    public void testBug69690b() throws Exception {
+        Tomcat tomcat = getTomcatInstance();
+        Context ctx = getProgrammaticRootContext();
+        Tomcat.addServlet(ctx, "Bug69690", new Bug69690Servlet());
+        ctx.addServletMappingDecoded("/", "Bug69690");
+        tomcat.start();
+
+        HttpURLConnection conn = getConnection("http://localhost:" + getPort() + "/part?a=b");
+
+        prepareMultiPartRequest(conn);
+
+        Assert.assertEquals(HttpServletResponse.SC_INTERNAL_SERVER_ERROR, conn.getResponseCode());
+
+        conn.disconnect();
+    }
+
+
+    private class Bug69690Servlet extends HttpServlet {
+
+        private static final long serialVersionUID = 1L;
+
+        @Override
+        protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+            resp.setCharacterEncoding(StandardCharsets.UTF_8);
+            resp.setContentType("text/plain");
+            PrintWriter pw = resp.getWriter();
+
+            if (req.getRequestURI().endsWith("/parameter")) {
+                if ("b".equals(req.getParameter("a"))) {
+                    pw.print("OK");
+                } else {
+                    pw.print("FAIL - Parameter 'a' not set to 'b'");
+                }
+            } else {
+                // This should trigger an error since the servlet does not have a multi-part configuration.
+                req.getPart("any");
+            }
         }
     }
 }
