@@ -18,6 +18,7 @@ package org.apache.catalina.webresources;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.Properties;
 
@@ -34,7 +35,7 @@ public class TestClasspathUrlStreamHandler {
 
     @Test
     public void testClasspathURL01() throws IOException {
-        URL u = new URL("classpath:/org/apache/catalina/webresources/LocalStrings.properties");
+        URL u = URI.create("classpath:/org/apache/catalina/webresources/LocalStrings.properties").toURL();
         InputStream is = u.openStream();
         Properties p = new Properties();
         p.load(is);
