@@ -17,8 +17,8 @@
 package org.apache.catalina.webresources.war;
 
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
-import java.net.URLConnection;
 
 import org.junit.Assert;
 import org.junit.Before;
@@ -57,25 +57,8 @@ public class TestHandler {
         String fileUrl = f.toURI().toURL().toString();
 
         String urlString = prefix + fileUrl + suffix;
-        URL url = new URL(urlString);
+        URL url = URI.create(urlString).toURL();
 
         Assert.assertEquals(urlString, url.toExternalForm());
-    }
-
-
-    @Test
-    public void testOldFormat() throws Exception {
-        File f = new File("test/webresources/war-url-connection.war");
-        String fileUrl = f.toURI().toURL().toString();
-
-        URL indexHtmlUrl = new URL("jar:war:" + fileUrl +
-                "^/WEB-INF/lib/test.jar!/META-INF/resources/index.html");
-
-        URLConnection urlConn = indexHtmlUrl.openConnection();
-        urlConn.connect();
-
-        int size = urlConn.getContentLength();
-
-        Assert.assertEquals(137, size);
     }
 }
