@@ -17,7 +17,7 @@
 package org.apache.tomcat.util.descriptor.web;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -353,7 +353,7 @@ public class TestWebXmlOrdering {
     @Test(expected=IllegalArgumentException.class)
     public void testOrderWebFragmentsRelativeDuplicate() throws MalformedURLException {
         WebXml withDuplicate = new WebXml();
-        withDuplicate.setURL(new URL("https://example.com/original.jar"));
+        withDuplicate.setURL(URI.create("https://example.com/original.jar").toURL());
         withDuplicate.addDuplicate("https://example.com/duplicate.jar");
 
         Map<String,WebXml> fragmentsWithDuplicate = new LinkedHashMap<>();
